@@ -8,6 +8,7 @@
 
 package io.moquette.persistence;
 
+import cn.wildfirechat.pojos.SystemSettingPojo;
 import cn.wildfirechat.proto.ProtoConstants;
 import cn.wildfirechat.proto.WFCMessage;
 import cn.wildfirechat.server.ThreadPoolExecutorWrapper;
@@ -15,10 +16,10 @@ import com.hazelcast.core.HazelcastInstance;
 import com.hazelcast.core.MultiMap;
 import com.hazelcast.util.StringUtil;
 import com.xiaoleilu.loServer.model.FriendData;
+import io.moquette.server.Server;
 import io.moquette.spi.ClientSession;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import sun.misc.BASE64Encoder;
 import win.liyufan.im.DBUtil;
 import win.liyufan.im.MessageBundle;
 import win.liyufan.im.MessageShardingUtil;
@@ -30,9 +31,11 @@ import java.sql.*;
 import java.util.*;
 import java.util.function.Function;
 
+
 import static cn.wildfirechat.proto.ProtoConstants.PersistFlag.Transparent;
 import static io.moquette.persistence.MemoryMessagesStore.USER_STATUS;
 import static io.moquette.server.Constants.MAX_MESSAGE_QUEUE;
+import static cn.wildfirechat.proto.ProtoConstants.SearchUserType.*;
 
 public class DatabaseStore {
     private static final Logger LOG = LoggerFactory.getLogger(DatabaseStore.class);
@@ -56,8 +59,6 @@ public class DatabaseStore {
 
             statement.setString(1, userId);
 
-            statement.executeQuery();
-
             rs = statement.executeQuery();
             while (rs.next()) {
                 int index = 1;
@@ -76,7 +77,84 @@ public class DatabaseStore {
         return out;
     }
 
-    List<WFCMessage.User> searchUserFromDB(String keyword, boolean buzzy, int page) {
+    boolean updateSystemSetting(int id, String value, String desc) {
+        Connection connection = null;
+        PreparedStatement statement = null;
+        try {
+            connection = DBUtil.getConnection();
+            String sql = "insert into t_settings " +
+                " (`id`, `value`, `desc`) values(?, ?, ?)" +
+                " ON DUPLICATE KEY UPDATE " +
+                "`value` = ?," +
+                "`desc` = ?";
+
+
+            statement = connection.prepareStatement(sql);
+            int index = 1;
+            statement.setLong(index++, id);
+            statement.setString(index++, value);
+            statement.setString(index++, desc);
+            statement.setString(index++, value);
+            statement.setString(index++, desc);
+
+            int count = statement.executeUpdate();
+            LOG.info("Update rows {}", count);
+            return true;
+        } catch (SQLException e) {
+            // TODO Auto-generated catch block
+            e.printStackTrace();
+            Utility.printExecption(LOG, e);
+        } finally {
+            DBUtil.closeDB(connection, statement);
+        }
+        return false;
+    }
+
+    SystemSettingPojo getSystemSetting(int id) {
+        Connection connection = null;
+        PreparedStatement statement = null;
+        ResultSet rs = null;
+
+        try {
+            connection = DBUtil.getConnection();
+            String sql = "select `value`, `desc` from t_settings where `id` = ?";
+
+            statement = connection.prepareStatement(sql);
+            int index = 1;
+            statement.setLong(index++, id);
+
+            rs = statement.executeQuery();
+            while (rs.next()) {
+                SystemSettingPojo out = new SystemSettingPojo();
+                index = 1;
+
+                out.id = id;
+
+                String value = rs.getString(index++);
+                value = (value == null ? "" : value);
+                out.value = value;
+
+                value = rs.getString(index++);
+                value = (value == null ? "" : value);
+                out.desc = value;
+
+               return out;
+            }
+        } catch (SQLException e) {
+            // TODO Auto-generated catch block
+            e.printStackTrace();
+            Utility.printExecption(LOG, e);
+        } finally {
+            DBUtil.closeDB(connection, statement, rs);
+        }
+        return null;
+    }
+    //searchType
+    // 0 模糊匹配displayName, 精确匹配账户名和电话号码
+    // 1 精确匹配账户名和电话号码
+    // 2 精确匹配账户名
+    // 3 精确匹配电话号码
+    List<WFCMessage.User> searchUserFromDB(String keyword, int searchType, int page) {
         Connection connection = null;
         PreparedStatement statement = null;
         ResultSet rs = null;
@@ -96,16 +174,31 @@ public class DatabaseStore {
                 ", `_social`" +
                 ", `_extra`" +
                 ", `_dt` from t_user";
-            if (buzzy) {
-                sql += " where `_display_name` like ?";
-            } else {
-                sql += " where `_display_name` = ?";
+            switch (searchType) {
+                case SearchUserType_Name_Mobile:
+                    sql += " where (`_name` = ? or `_mobile` = ?) ";
+                    break;
+                case SearchUserType_Name:
+                    sql += " where `_name` = ? ";
+                    break;
+                case SearchUserType_Mobile:
+                    sql += " where `_mobile` = ? ";
+                    break;
+                case SearchUserType_General:
+                default:
+                    sql += " where (`_display_name` like ? or `_name` = ? or `_mobile` = ?) ";
+                    break;
             }
 
-            sql += " and _type <> 2"; //can search normal user(0) and robot(1), can not search things
 
-            sql += " limit 20";
+            sql += " and _type <> 2"; //can search normal user(0) and robot(1) and admin(100), can not search things
 
+            if (searchType == SearchUserType_Name_Mobile || searchType == SearchUserType_Name || searchType == SearchUserType_Mobile) {
+                sql += " limit 1";
+            } else {
+                sql += " limit 20";
+            }
+            
             if (page > 0) {
                 sql += "offset = '" + page * 20 + "'";
             }
@@ -113,11 +206,24 @@ public class DatabaseStore {
 
             statement = connection.prepareStatement(sql);
             int index = 1;
-            if (buzzy) {
-                statement.setString(index++, "%" + keyword + "%");
-            } else {
-                statement.setString(index++, keyword);
+
+            switch (searchType) {
+                case SearchUserType_Name_Mobile:
+                    statement.setString(index++, keyword);
+                    statement.setString(index++, keyword);
+                    break;
+                case SearchUserType_Name:
+                case SearchUserType_Mobile:
+                    statement.setString(index++, keyword);
+                    break;
+                case SearchUserType_General:
+                default:
+                    statement.setString(index++, "%" + keyword + "%");
+                    statement.setString(index++, keyword);
+                    statement.setString(index++, keyword);
+                    break;
             }
+
 
             rs = statement.executeQuery();
             while (rs.next()) {
@@ -208,22 +314,26 @@ public class DatabaseStore {
         return 0;
     }
 
-    void reloadGroupMemberFromDB(HazelcastInstance hzInstance) {
+    synchronized Collection<WFCMessage.GroupMember>  reloadGroupMemberFromDB(HazelcastInstance hzInstance, String groupId) {
         MultiMap<String, WFCMessage.GroupMember> groupMembers = hzInstance.getMultiMap(MemoryMessagesStore.GROUP_MEMBERS);
+        if (groupMembers.get(groupId).size() > 0) {
+            return groupMembers.get(groupId);
+        }
 
         Connection connection = null;
         PreparedStatement statement = null;
         ResultSet rs = null;
         try {
             connection = DBUtil.getConnection();
-            String sql = "select `_gid`" +
-                ", `_mid`" +
+            String sql = "select `_mid`" +
                 ", `_alias`" +
                 ", `_type`" +
-                ", `_dt` from t_group_member";
+                ", `_dt` from t_group_member where _gid = ?";
             statement = connection.prepareStatement(sql);
 
+            statement.setString(1, groupId);
             int index;
+
 
             rs = statement.executeQuery();
             while (rs.next()) {
@@ -231,10 +341,6 @@ public class DatabaseStore {
                 index = 1;
 
                 String value = rs.getString(index++);
-                value = (value == null ? "" : value);
-                String groupId = value;
-
-                value = rs.getString(index++);
                 value = (value == null ? "" : value);
                 builder.setMemberId(value);
 
@@ -252,6 +358,7 @@ public class DatabaseStore {
                 WFCMessage.GroupMember member = builder.build();
                 groupMembers.put(groupId, member);
             }
+            return groupMembers.get(groupId);
         } catch (SQLException e) {
             // TODO Auto-generated catch block
             e.printStackTrace();
@@ -259,6 +366,7 @@ public class DatabaseStore {
         } finally {
             DBUtil.closeDB(connection, statement, rs);
         }
+        return new ArrayList<>();
     }
 
     void reloadFriendsFromDB(HazelcastInstance hzInstance) {
@@ -272,7 +380,7 @@ public class DatabaseStore {
 
         try {
             connection = DBUtil.getConnection();
-            String sql = "select `_uid`, `_friend_uid`, `_alias`, `_state`, `_dt` from t_friend";
+            String sql = "select `_uid`, `_friend_uid`, `_alias`, `_state`, `_blacked`, `_dt`, `_extra` from t_friend";
             statement = connection.prepareStatement(sql);
 
             int index;
@@ -297,8 +405,13 @@ public class DatabaseStore {
                 int intvalue = rs.getInt(index++);
                 builder.setState(intvalue);
 
+                intvalue = rs.getInt(index++);
+                builder.setBlacked(intvalue);
+
                 long longvalue = rs.getLong(index++);
                 builder.setTimestamp(longvalue);
+
+                builder.setExtra(rs.getString(index++));
 
                 friendsMap.put(builder.getUserId(), builder);
             }
@@ -382,11 +495,12 @@ public class DatabaseStore {
             try {
                 connection = DBUtil.getConnection();
                 String sql = "insert into " + MessageShardingUtil.getMessageTable(message.getMessageId()) +
-                    " (`_mid`, `_from`, `_type`, `_target`, `_line`, `_data`, `_searchable_key`, `_dt`) values(?, ?, ?, ?, ?, ?, ?, ?)" +
+                    " (`_mid`, `_from`, `_type`, `_target`, `_line`, `_data`, `_searchable_key`, `_dt`, `_content_type`, `_to`) values(?, ?, ?, ?, ?, ?, ?, ?, ?, ?)" +
                     " ON DUPLICATE KEY UPDATE " +
                     "`_data` = ?," +
                     "`_searchable_key` = ?," +
-                    "`_dt` = ?";
+                    "`_dt` = ?," +
+                    "`_content_type` = ?";
 
                 String searchableContent = message.getContent().getSearchableContent() == null ? "" : message.getContent().getSearchableContent();
 
@@ -402,10 +516,70 @@ public class DatabaseStore {
                 statement.setBlob(index++, blob);
                 statement.setString(index++, searchableContent);
                 statement.setTimestamp(index++, new Timestamp(message.getServerTimestamp()));
+                statement.setInt(index++, message.getContent().getType());
+                String to = message.getToUser();
+                if (StringUtil.isNullOrEmpty(message.getToUser())) {
+                    if (message.getToList()!= null && message.getToList().size() == 1) {
+                        to = message.getToList().get(0);
+                    }
+                }
+                statement.setString(index++, to);
 
                 statement.setBlob(index++, blob);
                 statement.setString(index++, searchableContent);
                 statement.setTimestamp(index++, new Timestamp(message.getServerTimestamp()));
+                statement.setInt(index++, message.getContent().getType());
+
+                int count = statement.executeUpdate();
+                LOG.info("Update rows {}", count);
+            } catch (SQLException e) {
+                // TODO Auto-generated catch block
+                e.printStackTrace();
+                Utility.printExecption(LOG, e);
+            } finally {
+                DBUtil.closeDB(connection, statement);
+            }
+        });
+    }
+
+    void persistSensitiveMessage(final WFCMessage.Message message) {
+        if(message.getContent().getPersistFlag() == Transparent) {
+            return;
+        }
+
+        mScheduler.execute(()-> {
+            Connection connection = null;
+            PreparedStatement statement = null;
+            try {
+                connection = DBUtil.getConnection();
+                String sql = "insert into " + "t_sensitive_messages" +
+                    " (`_mid`, `_from`, `_type`, `_target`, `_line`, `_data`, `_searchable_key`, `_dt`, `_content_type`) values(?, ?, ?, ?, ?, ?, ?, ?, ?)" +
+                    " ON DUPLICATE KEY UPDATE " +
+                    "`_data` = ?," +
+                    "`_searchable_key` = ?," +
+                    "`_dt` = ?," +
+                    "`_content_type` = ?";
+
+                String searchableContent = message.getContent().getSearchableContent() == null ? "" : message.getContent().getSearchableContent();
+
+                statement = connection.prepareStatement(sql);
+                int index = 1;
+                statement.setLong(index++, message.getMessageId());
+                statement.setString(index++, message.getFromUser());
+                statement.setInt(index++, message.getConversation().getType());
+                statement.setString(index++, message.getConversation().getTarget());
+                statement.setInt(index++, message.getConversation().getLine());
+                Blob blob = connection.createBlob();
+                blob.setBytes(1, message.getContent().toByteArray());
+                statement.setBlob(index++, blob);
+                statement.setString(index++, searchableContent);
+                statement.setTimestamp(index++, new Timestamp(message.getServerTimestamp()));
+                statement.setInt(index++, message.getContent().getType());
+
+                statement.setBlob(index++, blob);
+                statement.setString(index++, searchableContent);
+                statement.setTimestamp(index++, new Timestamp(message.getServerTimestamp()));
+                statement.setInt(index++, message.getContent().getType());
 
                 int count = statement.executeUpdate();
                 LOG.info("Update rows {}", count);
@@ -503,11 +677,12 @@ public class DatabaseStore {
         String sql = "select  `_from`, `_type`, `_target`, `_line`, `_data`, `_dt` from " + MessageShardingUtil.getMessageTable(messageId) +" where _mid = ? limit 1";
         Connection connection = null;
         PreparedStatement statement = null;
+        ResultSet resultSet = null;
         try {
             connection = DBUtil.getConnection();
             statement = connection.prepareStatement(sql);
             statement.setLong(1, messageId);
-            ResultSet resultSet = statement.executeQuery();
+            resultSet = statement.executeQuery();
             if (resultSet.next()) {
                 WFCMessage.Message.Builder builder = WFCMessage.Message.newBuilder();
                 builder.setMessageId(messageId);
@@ -526,32 +701,56 @@ public class DatabaseStore {
                 WFCMessage.Message message = builder.build();
                 return new MessageBundle(messageId, message.getFromUser(), null, message);
             }
-            resultSet.close();
         } catch (SQLException | IOException e) {
+            e.printStackTrace();
+            Utility.printExecption(LOG, e);
+        } finally {
+            DBUtil.closeDB(connection, statement, resultSet);
+        }
+        return null;
+    }
+
+    void deleteMessage(long messageId) {
+        String sql = "delete from " + MessageShardingUtil.getMessageTable(messageId) + " where _mid = ?";
+        Connection connection = null;
+        PreparedStatement statement = null;
+        try {
+            connection = DBUtil.getConnection();
+            statement = connection.prepareStatement(sql);
+            statement.setLong(1, messageId);
+
+            int count = statement.executeUpdate();
+            LOG.info("Update rows {}", count);
+        } catch (SQLException e) {
             e.printStackTrace();
             Utility.printExecption(LOG, e);
         } finally {
             DBUtil.closeDB(connection, statement);
         }
-        return null;
     }
 
     List<WFCMessage.Message> loadRemoteMessages(String user, WFCMessage.Conversation conversation, long beforeUid, int count) {
-        List<WFCMessage.Message> messages = loadRemoteMessagesFromTable(user, conversation, beforeUid, count, MessageShardingUtil.getMessageTable(beforeUid));
-        if (messages != null && messages.size() < count) {
-            String nexTable = MessageShardingUtil.getPreviousMessageTable(beforeUid);
-            if (!StringUtil.isNullOrEmpty(nexTable)) {
-                List<WFCMessage.Message> nextMessages = loadRemoteMessagesFromTable(user, conversation, beforeUid, count - messages.size(), nexTable);
-                if (nextMessages != null) {
-                    messages.addAll(nextMessages);
+        List<WFCMessage.Message> messages = new ArrayList<>();
+        long[] before = new long[1];
+        before[0] = beforeUid;
+        boolean hasMore = loadRemoteMessagesFromTable(user, conversation, before, count, MessageShardingUtil.getMessageTable(beforeUid), messages);
+        if (messages.size() < count) {
+            if (hasMore) {
+                loadRemoteMessagesFromTable(user, conversation, before, count - messages.size(), MessageShardingUtil.getMessageTable(beforeUid), messages);
+            } else {
+                String nexTable = MessageShardingUtil.getPreviousMessageTable(before[0]);
+                if (!StringUtil.isNullOrEmpty(nexTable)) {
+                    loadRemoteMessagesFromTable(user, conversation, before, count - messages.size(), nexTable, messages);
                 }
             }
         }
+
         return messages;
     }
 
-    List<WFCMessage.Message> loadRemoteMessagesFromTable(String user, WFCMessage.Conversation conversation, long beforeUid, int count, String table) {
-        String sql = "select `_mid`, `_from`, `_type`, `_target`, `_line`, `_data`, `_dt` from " + table +" where";
+    boolean loadRemoteMessagesFromTable(String user, WFCMessage.Conversation conversation, long[] before, int count, String table, List<WFCMessage.Message> messages) {
+        long beforeUid = before[0];
+        String sql = "select `_mid`, `_from`, `_type`, `_target`, `_line`, `_data`, `_dt`, `_to` from " + table +" where";
         if (conversation.getType() == ProtoConstants.ConversationType.ConversationType_Private) {
             sql += " _type = ? and _line = ? and _mid < ? and ((_target = ?  and _from = ?) or (_target = ?  and _from = ?))";
         } else {
@@ -563,7 +762,6 @@ public class DatabaseStore {
         Connection connection = null;
         PreparedStatement statement = null;
         ResultSet resultSet = null;
-        List<WFCMessage.Message> out = new ArrayList<>();
         try {
             connection = DBUtil.getConnection();
             statement = connection.prepareStatement(sql);
@@ -580,9 +778,12 @@ public class DatabaseStore {
             statement.setInt(index++, count);
             resultSet = statement.executeQuery();
             while (resultSet.next()) {
+                count--;
                 WFCMessage.Message.Builder builder = WFCMessage.Message.newBuilder();
                 index = 1;
                 builder.setMessageId(resultSet.getLong(index++));
+                before[0] = builder.getMessageId();
+
                 builder.setFromUser(resultSet.getString(index++));
                 WFCMessage.Conversation.Builder cb = WFCMessage.Conversation.newBuilder();
                 cb.setType(resultSet.getInt(index++));
@@ -593,9 +794,22 @@ public class DatabaseStore {
 
                 WFCMessage.MessageContent messageContent = WFCMessage.MessageContent.parseFrom(blob.getBinaryStream());
                 builder.setContent(messageContent);
+
                 builder.setServerTimestamp(resultSet.getTimestamp(index++).getTime());
+                String to = resultSet.getString(index++);
+                if (!StringUtil.isNullOrEmpty(to)) {
+                    if (to.equals(user) || builder.getFromUser().equals(user)) {
+                        builder.setToUser(to);
+                    } else {
+                        continue;
+                    }
+                }
                 WFCMessage.Message message = builder.build();
-                out.add(message);
+                messages.add(message);
+            }
+
+            if (count == 0) {
+                return true;
             }
         } catch (SQLException | IOException e) {
             e.printStackTrace();
@@ -603,7 +817,7 @@ public class DatabaseStore {
         } finally {
             DBUtil.closeDB(connection, statement, resultSet);
         }
-        return out;
+        return false;
     }
 
     void persistUserMessage(final String userId, final long messageId, final long messageSeq) {
@@ -632,6 +846,77 @@ public class DatabaseStore {
         });
     }
 
+    void clearUserMessage(final String userId) {
+        mScheduler.execute(()->{
+            String tableName = getUserMessageTable(userId);
+            Connection connection = null;
+            PreparedStatement statement = null;
+            try {
+                connection = DBUtil.getConnection();
+
+                String sql = "delete from " + tableName + " where _uid = ?";
+                statement = connection.prepareStatement(sql);
+                statement.setString(1, userId);
+                int count = statement.executeUpdate();
+                LOG.info("Update rows {}", count);
+
+                try {
+                    if (statement!=null) {
+                        statement.close();
+                    }
+                    statement = null;
+                } catch (SQLException e) {
+                    e.printStackTrace();
+                    Utility.printExecption(LOG, e);
+                }
+            } catch (SQLException e) {
+                // TODO Auto-generated catch block
+                e.printStackTrace();
+                Utility.printExecption(LOG, e);
+            } finally {
+                DBUtil.closeDB(connection, statement);
+            }
+        });
+
+    }
+
+    void removeFavGroup(final String groupId, final List<String> memberIds) {
+        Connection connection = null;
+        PreparedStatement statement = null;
+        try {
+            connection = DBUtil.getConnection();
+
+            StringBuilder sb = new StringBuilder("update t_user_setting set _value = ?, _dt = ? where _uid in (");
+            for (int i = 0; i < memberIds.size(); i++) {
+                sb.append("?");
+                if (i != memberIds.size() - 1) {
+                    sb.append(",");
+                }
+            }
+            sb.append(")");
+
+            sb.append(" and _scope = 6 and _key = ?");
+
+            statement = connection.prepareStatement(sb.toString());
+            int index = 1;
+            statement.setString(index++, "0");
+            statement.setLong(index++, System.currentTimeMillis());
+            for (int i = 0; i < memberIds.size(); i++) {
+                statement.setString(index++, memberIds.get(i));
+            }
+            statement.setString(index++, groupId);
+
+            int count = statement.executeUpdate();
+            LOG.info("Update rows {}", count);
+        } catch (SQLException e) {
+            // TODO Auto-generated catch block
+            e.printStackTrace();
+            Utility.printExecption(LOG, e);
+        } finally {
+            DBUtil.closeDB(connection, statement);
+        }
+    }
+
     void persistUserSetting(final String userId, WFCMessage.UserSettingEntry entry) {
         mScheduler.execute(()->{
             Connection connection = null;
@@ -657,6 +942,31 @@ public class DatabaseStore {
                 statement.setLong(index++, entry.getUpdateDt());
                 statement.setString(index++, entry.getValue());
                 statement.setLong(index++, entry.getUpdateDt());
+
+                int count = statement.executeUpdate();
+                LOG.info("Update rows {}", count);
+            } catch (SQLException e) {
+                // TODO Auto-generated catch block
+                e.printStackTrace();
+                Utility.printExecption(LOG, e);
+            } finally {
+                DBUtil.closeDB(connection, statement);
+            }
+        });
+    }
+
+    void clearUserSetting(final String userId) {
+        mScheduler.execute(()->{
+            Connection connection = null;
+            PreparedStatement statement = null;
+            try {
+                connection = DBUtil.getConnection();
+
+                String sql = "delete from t_user_setting where `_uid` = ?";
+
+                statement = connection.prepareStatement(sql);
+                int index = 1;
+                statement.setString(index++, userId);
 
                 int count = statement.executeUpdate();
                 LOG.info("Update rows {}", count);
@@ -723,75 +1033,190 @@ public class DatabaseStore {
     }
 
 
-    void persistGroupInfo(final WFCMessage.GroupInfo groupInfo) {
-        mScheduler.execute(()->{
-            Connection connection = null;
-            PreparedStatement statement = null;
-            try {
-                connection = DBUtil.getConnection();
-                String sql = "insert into t_group (`_gid`" +
-                    ", `_name`" +
-                    ", `_portrait`" +
-                    ", `_owner`" +
-                    ", `_type`" +
-                    ", `_extra`" +
-                    ", `_dt`" +
-                    ", `_member_count`" +
-                    ", `_member_dt`) values(?, ?, ?, ?, ?, ?, ?, ?, ?)" +
-                    " ON DUPLICATE KEY UPDATE " +
-                    "`_name` = ?," +
-                    "`_portrait` = ?," +
-                    "`_owner` = ?," +
-                    "`_type` = ?," +
-                    "`_extra` = ?," +
-                    "`_dt` = ?," +
-                    "`_member_count` = ?," +
-                    "`_member_dt` = ?";
+    void removeGroupUserSettings(String groupId, List<String> users) {
+        Connection connection = null;
+        PreparedStatement statement = null;
+        try {
+            connection = DBUtil.getConnection();
 
-
-                statement = connection.prepareStatement(sql);
-
-                int index = 1;
-                statement.setString(index++, groupInfo.getTargetId());
-                statement.setString(index++, groupInfo.getName());
-                statement.setString(index++, groupInfo.getPortrait());
-                statement.setString(index++, groupInfo.getOwner());
-                statement.setInt(index++, groupInfo.getType());
-                statement.setString(index++, groupInfo.getExtra());
-                statement.setLong(index++, groupInfo.getUpdateDt() == 0 ? System.currentTimeMillis() : groupInfo.getUpdateDt());
-                statement.setInt(index++, groupInfo.getMemberCount());
-                statement.setLong(index++, groupInfo.getMemberUpdateDt() == 0 ? System.currentTimeMillis() : groupInfo.getUpdateDt());
-
-                statement.setString(index++, groupInfo.getName());
-                statement.setString(index++, groupInfo.getPortrait());
-                statement.setString(index++, groupInfo.getOwner());
-                statement.setInt(index++, groupInfo.getType());
-                statement.setString(index++, groupInfo.getExtra());
-                statement.setLong(index++, groupInfo.getUpdateDt() == 0 ? System.currentTimeMillis() : groupInfo.getUpdateDt());
-                statement.setInt(index++, groupInfo.getMemberCount());
-                statement.setLong(index++, groupInfo.getMemberUpdateDt() == 0 ? System.currentTimeMillis() : groupInfo.getUpdateDt());
-                int count = statement.executeUpdate();
-                LOG.info("Update rows {}", count);
-            } catch (SQLException e) {
-                // TODO Auto-generated catch block
-                e.printStackTrace();
-                Utility.printExecption(LOG, e);
-            } finally {
-                DBUtil.closeDB(connection, statement);
+            StringBuilder sb = new StringBuilder("delete from t_user_setting where _scope in (1,3,5,7) and _uid in (");
+            for (int i = 0; i < users.size(); i++) {
+                sb.append("?");
+                if (i != users.size() - 1) {
+                    sb.append(",");
+                }
             }
-        });
+            sb.append(") and _key like '1-_-");
+            sb.append(groupId);
+            sb.append("'");
+
+
+            statement = connection.prepareStatement(sb.toString());
+            int index = 1;
+            for (String userId:users) {
+                statement.setString(index++, userId);
+            }
+
+            int count = statement.executeUpdate();
+            LOG.info("Update rows {}", count);
+        } catch (SQLException e) {
+            // TODO Auto-generated catch block
+            e.printStackTrace();
+            Utility.printExecption(LOG, e);
+        } finally {
+            DBUtil.closeDB(connection, statement);
+        }
+    }
+
+    void persistGroupInfo(final WFCMessage.GroupInfo groupInfo) {
+        Connection connection = null;
+        PreparedStatement statement = null;
+        try {
+            connection = DBUtil.getConnection();
+            String sql = "insert into t_group (`_gid`" +
+                ", `_name`" +
+                ", `_portrait`" +
+                ", `_owner`" +
+                ", `_type`" +
+                ", `_extra`" +
+                ", `_dt`" +
+                ", `_member_count`" +
+                ", `_mute`" +
+                ", `_join_type`" +
+                ", `_private_chat`" +
+                ", `_searchable`" +
+                ", `_member_dt`) values(?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)" +
+                " ON DUPLICATE KEY UPDATE " +
+                "`_name` = ?," +
+                "`_portrait` = ?," +
+                "`_owner` = ?," +
+                "`_type` = ?," +
+                "`_extra` = ?," +
+                "`_dt` = ?," +
+                "`_member_count` = ?," +
+                "`_mute` = ?" +
+                ", `_join_type` = ?" +
+                ", `_private_chat` = ?" +
+                ", `_searchable` = ?, " +
+                "`_member_dt` = ?";
+
+
+            statement = connection.prepareStatement(sql);
+
+            int index = 1;
+            statement.setString(index++, groupInfo.getTargetId());
+            statement.setString(index++, groupInfo.getName());
+            statement.setString(index++, groupInfo.getPortrait());
+            statement.setString(index++, groupInfo.getOwner());
+            statement.setInt(index++, groupInfo.getType());
+            statement.setString(index++, groupInfo.getExtra());
+            statement.setLong(index++, groupInfo.getUpdateDt() == 0 ? System.currentTimeMillis() : groupInfo.getUpdateDt());
+            statement.setInt(index++, groupInfo.getMemberCount());
+            statement.setInt(index++, groupInfo.getMute());
+            statement.setInt(index++, groupInfo.getJoinType());
+            statement.setInt(index++, groupInfo.getPrivateChat());
+            statement.setInt(index++, groupInfo.getSearchable());
+            statement.setLong(index++, groupInfo.getMemberUpdateDt() == 0 ? System.currentTimeMillis() : groupInfo.getUpdateDt());
+
+            statement.setString(index++, groupInfo.getName());
+            statement.setString(index++, groupInfo.getPortrait());
+            statement.setString(index++, groupInfo.getOwner());
+            statement.setInt(index++, groupInfo.getType());
+            statement.setString(index++, groupInfo.getExtra());
+            statement.setLong(index++, groupInfo.getUpdateDt() == 0 ? System.currentTimeMillis() : groupInfo.getUpdateDt());
+            statement.setInt(index++, groupInfo.getMemberCount());
+            statement.setInt(index++, groupInfo.getMute());
+            statement.setInt(index++, groupInfo.getJoinType());
+            statement.setInt(index++, groupInfo.getPrivateChat());
+            statement.setInt(index++, groupInfo.getSearchable());
+            statement.setLong(index++, groupInfo.getMemberUpdateDt() == 0 ? System.currentTimeMillis() : groupInfo.getUpdateDt());
+            int count = statement.executeUpdate();
+            LOG.info("Update rows {}", count);
+        } catch (SQLException e) {
+            // TODO Auto-generated catch block
+            e.printStackTrace();
+            Utility.printExecption(LOG, e);
+        } finally {
+            DBUtil.closeDB(connection, statement);
+        }
+    }
+
+    List<MemorySessionStore.Session> getUserActivedSessions(String uid) {
+        String sql = "select  `_cid`, `_package_name`,`_token`,`_voip_token`,`_secret`,`_db_secret`,`_platform`,`_push_type`,`_device_name`,`_device_version`,`_phone_name`,`_language`,`_carrier_name`, `_dt` from t_user_session where `_uid` = ? and `_deleted` = 0";
+        Connection connection = null;
+        PreparedStatement statement = null;
+        List<MemorySessionStore.Session> result = new ArrayList<>();
+        ResultSet resultSet = null;
+        try {
+            connection = DBUtil.getConnection();
+            statement = connection.prepareStatement(sql);
+            statement.setString(1, uid);
+
+            resultSet = statement.executeQuery();
+            while (resultSet.next()) {
+                int index = 1;
+                String cid = resultSet.getString(index++);
+
+                ClientSession clientSession = new ClientSession(cid, Server.getServer().getStore().sessionsStore());
+                MemorySessionStore.Session session = new MemorySessionStore.Session(uid, cid, clientSession);
+
+                session.setAppName(resultSet.getString(index++));
+                session.setDeviceToken(resultSet.getString(index++));
+                session.setVoipDeviceToken(resultSet.getString(index++));
+                session.setSecret(resultSet.getString(index++));
+                session.setDbSecret(resultSet.getString(index++));
+                session.setPlatform(resultSet.getInt(index++));
+                session.setPushType(resultSet.getInt(index++));
+
+                session.setDeviceName(resultSet.getString(index++));
+                session.setDeviceVersion(resultSet.getString(index++));
+                session.setPhoneName(resultSet.getString(index++));
+                session.setLanguage(resultSet.getString(index++));
+                session.setCarrierName(resultSet.getString(index++));
+                session.setUpdateDt(resultSet.getLong(index++));
+                result.add(session);
+            }
+        } catch (SQLException e) {
+            e.printStackTrace();
+            Utility.printExecption(LOG, e);
+        } finally {
+            DBUtil.closeDB(connection, statement, resultSet);
+        }
+        return result;
+    }
+
+    void clearUserSessions(String uid) {
+        Connection connection = null;
+        PreparedStatement statement = null;
+        try {
+            connection = DBUtil.getConnection();
+            String sql = "delete from t_user_session where `_uid`=?";
+            statement = connection.prepareStatement(sql);
+            int index = 1;
+            statement.setString(index++, uid);
+
+            int count = statement.executeUpdate();
+            LOG.info("Update rows {}", count);
+        } catch (SQLException e) {
+            // TODO Auto-generated catch block
+            e.printStackTrace();
+            Utility.printExecption(LOG, e);
+        } finally {
+            DBUtil.closeDB(connection, statement);
+        }
     }
 
     MemorySessionStore.Session getSession(String uid, String clientId, ClientSession clientSession) {
-        String sql = "select  `_package_name`,`_token`,`_voip_token`,`_secret`,`_db_secret`,`_platform`,`_push_type`,`_device_name`,`_device_version`,`_phone_name`,`_language`,`_carrier_name`, `_dt` from t_user_session where `_uid` = ? and `_cid` = ? limit 1";
+        String sql = "select  `_package_name`,`_token`,`_voip_token`,`_secret`,`_db_secret`,`_platform`,`_push_type`,`_device_name`,`_device_version`,`_phone_name`,`_language`,`_carrier_name`, `_dt`, `_deleted` from t_user_session where `_uid` = ? and `_cid` = ? limit 1";
         Connection connection = null;
         PreparedStatement statement = null;
+        ResultSet resultSet = null;
         try {
             connection = DBUtil.getConnection();
             statement = connection.prepareStatement(sql);
             statement.setString(1, uid);
             statement.setString(2, clientId);
-            ResultSet resultSet = statement.executeQuery();
+            resultSet = statement.executeQuery();
             if (resultSet.next()) {
                 MemorySessionStore.Session session = new MemorySessionStore.Session(uid, clientId, clientSession);
 
@@ -809,23 +1234,58 @@ public class DatabaseStore {
                 session.setPhoneName(resultSet.getString(index++));
                 session.setLanguage(resultSet.getString(index++));
                 session.setCarrierName(resultSet.getString(index++));
-                session.setUpdateDt(resultSet.getLong(index));
+                session.setUpdateDt(resultSet.getLong(index++));
+                session.setDeleted(resultSet.getInt(index));
                 return session;
             }
-            resultSet.close();
         } catch (SQLException e) {
+            e.printStackTrace();
+            Utility.printExecption(LOG, e);
+        } finally {
+            DBUtil.closeDB(connection, statement, resultSet);
+        }
+        return null;
+    }
+
+    void clearOtherSessionToken(String cid, String token, int pushType, boolean voipToken) {
+        if (voipToken) {
+            return;
+        }
+
+        Connection connection = null;
+        PreparedStatement statement = null;
+        try {
+            connection = DBUtil.getConnection();
+
+            String sql = "update t_user_session set `_token` = ?, `_dt` = ? where `_token` = ? and `_push_type` = ? and `_cid` <> ?";
+
+            statement = connection.prepareStatement(sql);
+
+            int index = 1;
+            statement.setString(index++, "");
+            statement.setLong(index++, System.currentTimeMillis());
+            statement.setString(index++, token);
+            statement.setInt(index++, pushType);
+            statement.setString(index++, cid);
+
+            int c = statement.executeUpdate();
+            LOG.info("Update rows {}", c);
+        } catch (SQLException e) {
+            // TODO Auto-generated catch block
             e.printStackTrace();
             Utility.printExecption(LOG, e);
         } finally {
             DBUtil.closeDB(connection, statement);
         }
-        return null;
     }
 
-    void updateSessionToken(String uid, String cid, String token, boolean voipToken) {
+
+    void updateSessionToken(String uid, String cid, String token, int pushType, boolean voipToken) {
         mScheduler.execute(()->{
             Connection connection = null;
             PreparedStatement statement = null;
+
+            clearOtherSessionToken(cid, token, pushType, voipToken);
             try {
                 connection = DBUtil.getConnection();
 
@@ -834,13 +1294,74 @@ public class DatabaseStore {
                 if (voipToken) {
                     sql = "update t_user_session set `_voip_token` = ?, `_dt` = ? where `_uid` = ? and `_cid` = ?";
                 } else {
-                    sql = "update t_user_session set `_token` = ?, `_dt` = ? where `_uid` = ? and `_cid` = ?";
+                    sql = "update t_user_session set `_token` = ?, `_push_type` = ?, `_dt` = ? where `_uid` = ? and `_cid` = ?";
                 }
                 statement = connection.prepareStatement(sql);
 
                 int index = 1;
                 statement.setString(index++, token);
+                if (!voipToken) {
+                    statement.setInt(index++, pushType);
+                }
                 statement.setLong(index++, System.currentTimeMillis());
+                statement.setString(index++, uid);
+                statement.setString(index++, cid);
+
+                int c = statement.executeUpdate();
+                LOG.info("Update rows {}", c);
+            } catch (SQLException e) {
+                // TODO Auto-generated catch block
+                e.printStackTrace();
+                Utility.printExecption(LOG, e);
+            } finally {
+                DBUtil.closeDB(connection, statement);
+            }
+        });
+    }
+
+    void updateSessionDeleted(String uid, String cid, int deleted) {
+        mScheduler.execute(()->{
+            Connection connection = null;
+            PreparedStatement statement = null;
+
+            try {
+                connection = DBUtil.getConnection();
+
+                String sql = "update t_user_session set `_deleted` = ? where `_uid` = ? and `_cid` = ?";
+
+                statement = connection.prepareStatement(sql);
+
+                int index = 1;
+                statement.setInt(index++, deleted);
+                statement.setString(index++, uid);
+                statement.setString(index++, cid);
+
+                int c = statement.executeUpdate();
+                LOG.info("Update rows {}", c);
+            } catch (SQLException e) {
+                // TODO Auto-generated catch block
+                e.printStackTrace();
+                Utility.printExecption(LOG, e);
+            } finally {
+                DBUtil.closeDB(connection, statement);
+            }
+        });
+    }
+
+    void updateSessionPlatform(String uid, String cid, int platform) {
+        mScheduler.execute(()->{
+            Connection connection = null;
+            PreparedStatement statement = null;
+
+            try {
+                connection = DBUtil.getConnection();
+
+                String sql = "update t_user_session set `_platform` = ? where `_uid` = ? and `_cid` = ?";
+
+                statement = connection.prepareStatement(sql);
+
+                int index = 1;
+                statement.setInt(index++, platform);
                 statement.setString(index++, uid);
                 statement.setString(index++, cid);
 
@@ -914,7 +1435,7 @@ public class DatabaseStore {
                     statement.setInt(index++, request.getPlatform());
                 }
                 if (session.getPushType() != request.getPushType()) {
-                    statement.setInt(index++, request.getPushType());
+                    statement.setInt(index++, request.getPushType() >= 32 ? 0 : request.getPushType());
                 }
                 if (!strEqual(session.getDeviceName(), request.getDeviceName())) {
                     statement.setString(index++, request.getDeviceName());
@@ -948,23 +1469,71 @@ public class DatabaseStore {
         });
     }
 
-    MemorySessionStore.Session createSession(String uid, String clientId, ClientSession clientSession) {
+    void clearMultiEndpoint(String uid, String clientId, int platform) {
+        LOG.info("clearMultiEndpoint {}, {}", uid, clientId);
+        Connection connection = null;
+        PreparedStatement statement = null;
+        try {
+            connection = DBUtil.getConnection();
+            String sql;
+            if (platform == ProtoConstants.Platform.Platform_Windows || platform == ProtoConstants.Platform.Platform_OSX
+                    || platform == ProtoConstants.Platform.Platform_iOS || platform == ProtoConstants.Platform.Platform_Android) {
+                sql = "update t_user_session set `_deleted` = ?, `_token` = ?, `_voip_token` = ?, `_dt` = ?  where `_uid`=? and (`_platform` = ? or `_platform` = ?)  and `_cid` <> ? and `_deleted` = 0";
+            } else {
+                sql = "update t_user_session set `_deleted` = ?, `_token` = ?, `_voip_token` = ?, `_dt` = ?  where `_uid`=? and `_platform` = ? and `_cid` <> ? and `_deleted` = 0";
+            }
+
+            statement = connection.prepareStatement(sql);
+            int index = 1;
+
+            statement.setInt(index++, 1);
+            statement.setString(index++, "");
+            statement.setString(index++, "");
+            statement.setLong(index++, System.currentTimeMillis());
+
+            statement.setString(index++, uid);
+
+            if (platform == ProtoConstants.Platform.Platform_Windows || platform == ProtoConstants.Platform.Platform_OSX) {
+                statement.setInt(index++, ProtoConstants.Platform.Platform_Windows);
+                statement.setInt(index++, ProtoConstants.Platform.Platform_OSX);
+            } else if(platform == ProtoConstants.Platform.Platform_iOS || platform == ProtoConstants.Platform.Platform_Android) {
+                statement.setInt(index++, ProtoConstants.Platform.Platform_iOS);
+                statement.setInt(index++, ProtoConstants.Platform.Platform_Android);
+            } else {
+                statement.setInt(index++, platform);
+            }
+
+            statement.setString(index++, clientId);
+
+            int count = statement.executeUpdate();
+            LOG.info("Update rows {}", count);
+        } catch (SQLException e) {
+            // TODO Auto-generated catch block
+            e.printStackTrace();
+            Utility.printExecption(LOG, e);
+        } finally {
+            DBUtil.closeDB(connection, statement);
+        }
+    }
+
+    MemorySessionStore.Session createSession(String uid, String clientId, ClientSession clientSession, int platform) {
         Connection connection = null;
         PreparedStatement statement = null;
         LOG.info("Database create session {},{}", uid, clientId);
         try {
             connection = DBUtil.getConnection();
-            String sql = "insert into t_user_session  (`_uid`,`_cid`,`_secret`,`_db_secret`, `_dt`) values (?,?,?,?,?)";
+            String sql = "insert into t_user_session  (`_uid`,`_cid`,`_platform`,`_secret`,`_db_secret`, `_dt`) values (?,?,?,?,?,?)";
 
             statement = connection.prepareStatement(sql);
 
             int index = 1;
 
             MemorySessionStore.Session session = new MemorySessionStore.Session(uid, clientId, clientSession);
-
+            session.setPlatform(platform);
 
             statement.setString(index++, uid);
             statement.setString(index++, clientId);
+            statement.setInt(index++, platform);
 
 
             session.setSecret(UUID.randomUUID().toString());
@@ -989,44 +1558,70 @@ public class DatabaseStore {
         return null;
     }
 
-    void updateGroupMemberCountDt(final String groupId, final int count, final long dt) {
-        mScheduler.execute(()->{
-            Connection connection = null;
-            PreparedStatement statement = null;
-            try {
-                connection = DBUtil.getConnection();
+    Set<String> getUserGroupIds(String userId) {
+        Connection connection = null;
+        PreparedStatement statement = null;
+        ResultSet rs = null;
+        try {
+            connection = DBUtil.getConnection();
+            String sql = "select `_gid` from t_group_member where `_mid` = ? and `_type` <> ?";
+            statement = connection.prepareStatement(sql);
 
-                String sql ;
+            statement.setString(1, userId);
+            statement.setInt(2, ProtoConstants.GroupMemberType.GroupMemberType_Removed);
 
-                if (count >= 0) {
-                    sql = "update t_group set `_member_count` = ?, `_member_dt` = ? , `_dt` = ? where `_gid` = ?";
-                } else {
-                    sql = "update t_group set `_member_dt` = ?, `_dt` = ? where `_gid` = ?";
-                }
-                statement = connection.prepareStatement(sql);
 
-                int index = 1;
-                if (count >=0) {
-                    statement.setInt(index++, count);
-                }
-                statement.setLong(index++, dt);
-                statement.setLong(index++, dt);
-                statement.setString(index++, groupId);
-
-                int c = statement.executeUpdate();
-                LOG.info("Update rows {}", c);
-            } catch (SQLException e) {
-                // TODO Auto-generated catch block
-                e.printStackTrace();
-                Utility.printExecption(LOG, e);
-            } finally {
-                DBUtil.closeDB(connection, statement);
+            rs = statement.executeQuery();
+            Set<String> out = new HashSet<>();
+            while (rs.next()) {
+                String uid = rs.getString(1);
+                out.add(uid);
             }
-        });
+            return out;
+        } catch (SQLException e) {
+            // TODO Auto-generated catch block
+            e.printStackTrace();
+            Utility.printExecption(LOG, e);
+        } finally {
+            DBUtil.closeDB(connection, statement, rs);
+        }
+        return null;
+    }
+    void updateGroupMemberCountDt(final String groupId, final int count, final long dt) {
+        Connection connection = null;
+        PreparedStatement statement = null;
+        try {
+            connection = DBUtil.getConnection();
+
+            String sql ;
+
+            if (count >= 0) {
+                sql = "update t_group set `_member_count` = ?, `_member_dt` = ? , `_dt` = ? where `_gid` = ?";
+            } else {
+                sql = "update t_group set `_member_dt` = ?, `_dt` = ? where `_gid` = ?";
+            }
+            statement = connection.prepareStatement(sql);
+
+            int index = 1;
+            if (count >=0) {
+                statement.setInt(index++, count);
+            }
+            statement.setLong(index++, dt);
+            statement.setLong(index++, dt);
+            statement.setString(index++, groupId);
+
+            int c = statement.executeUpdate();
+            LOG.info("Update rows {}", c);
+        } catch (SQLException e) {
+            // TODO Auto-generated catch block
+            e.printStackTrace();
+            Utility.printExecption(LOG, e);
+        } finally {
+            DBUtil.closeDB(connection, statement);
+        }
     }
 
     void persistGroupMember(final String groupId, final List<WFCMessage.GroupMember> memberList) {
-        mScheduler.execute(()->{
             Connection connection = null;
             PreparedStatement statement = null;
             try {
@@ -1082,7 +1677,70 @@ public class DatabaseStore {
             } finally {
                 DBUtil.closeDB(connection, statement);
             }
-        });
+    }
+
+    int removeGroupMember(String groupId, List<String> groupMembers) {
+        Connection connection = null;
+        PreparedStatement statement = null;
+        PreparedStatement statement2 = null;
+        try {
+            connection = DBUtil.getConnection();
+            connection.setAutoCommit(false);
+
+            StringBuilder sqlBuilder = new StringBuilder("update t_group_member set `_type` = ?, `_dt` = ? where `_mid` in (");
+            for (int i = 0; i < groupMembers.size(); i++) {
+                sqlBuilder.append("?");
+                if (i != groupMembers.size()-1) {
+                    sqlBuilder.append(",");
+                }
+            }
+            sqlBuilder.append(")");
+
+            sqlBuilder.append(" and _gid = ?");
+
+            statement = connection.prepareStatement(sqlBuilder.toString());
+
+            int index = 1;
+            long current = System.currentTimeMillis();
+            statement.setInt(index++, ProtoConstants.GroupMemberType.GroupMemberType_Removed);
+            statement.setLong(index++, current);
+
+            for (String memberId:groupMembers) {
+                statement.setString(index++, memberId);
+            }
+            statement.setString(index++, groupId);
+
+            int count = statement.executeUpdate();
+            LOG.info("Update rows {}", count);
+
+            String sql = "update t_group set `_member_count` = `_member_count` - ?, `_member_dt` = ? , `_dt` = ? where `_gid` = ?";
+
+            statement2 = connection.prepareStatement(sql);
+            index = 1;
+            statement2.setInt(index++, count);
+            statement2.setLong(index++, current);
+            statement2.setLong(index++, current);
+            statement2.setString(index++, groupId);
+            statement2.executeUpdate();
+            connection.commit();
+            connection.setAutoCommit(true);
+        } catch (SQLException e) {
+            // TODO Auto-generated catch block
+            if (connection != null) {
+                try {
+                    connection.commit();
+                    connection.setAutoCommit(true);
+                } catch (SQLException e1) {
+                    e1.printStackTrace();
+                }
+            }
+            e.printStackTrace();
+            Utility.printExecption(LOG, e);
+        } finally {
+            DBUtil.closeDB(connection, statement);
+            DBUtil.closeDB(connection, statement2);
+        }
+        return 0;
     }
 
     WFCMessage.GroupInfo getPersistGroupInfo(String groupId) {
@@ -1099,6 +1757,10 @@ public class DatabaseStore {
                 ", `_dt`" +
                 ", `_member_count`" +
                 ", `_member_dt`" +
+                ", `_mute`" +
+                ", `_join_type`" +
+                ", `_private_chat`" +
+                ", `_searchable`" +
                 " from t_group  where `_gid` = ?";
 
             statement = connection.prepareStatement(sql);
@@ -1134,17 +1796,26 @@ public class DatabaseStore {
                 strValue = (strValue == null ? "" : strValue);
                 builder.setExtra(strValue);
 
-
-
                 long longValue = rs.getLong(index++);
                 builder.setUpdateDt(longValue);
-
 
                 intValue = rs.getInt(index++);
                 builder.setMemberCount(intValue);
 
                 longValue = rs.getLong(index++);
                 builder.setMemberUpdateDt(longValue);
+
+                intValue = rs.getInt(index++);
+                builder.setMute(intValue);
+
+                intValue = rs.getInt(index++);
+                builder.setJoinType(intValue);
+
+                intValue = rs.getInt(index++);
+                builder.setPrivateChat(intValue);
+
+                intValue = rs.getInt(index++);
+                builder.setSearchable(intValue);
 
                 return builder.build();
             }
@@ -1314,8 +1985,7 @@ public class DatabaseStore {
 
                 try {
                     MessageDigest md5 = MessageDigest.getInstance("MD5");
-                    BASE64Encoder base64en = new BASE64Encoder();
-                    String passwdMd5 = base64en.encode(md5.digest(password.getBytes("utf-8")));
+                    String passwdMd5 = Base64.getEncoder().encodeToString(md5.digest(password.getBytes("utf-8")));
                     statement.setString(index, passwdMd5);
                 } catch (Exception e) {
                     statement.setString(index, "");
@@ -1488,9 +2158,8 @@ public class DatabaseStore {
         });
     }
 
-    void updateUser(final WFCMessage.User user) {
+    void updateUser(final WFCMessage.User user) throws Exception {
         LOG.info("Database update user info {} {}", user.getUid(), user.getUpdateDt());
-        mScheduler.execute(()->{
             Connection connection = null;
             PreparedStatement statement = null;
             LOG.info("Database update user info {}", user.getDisplayName());
@@ -1520,6 +2189,7 @@ public class DatabaseStore {
                     ", `_social`=?" +
                     ", `_extra`=?" +
                     ", `_type`=?" +
+                    ", `_deleted`=?" +
                     ", `_dt`=?";
 
                 statement = connection.prepareStatement(sql);
@@ -1553,8 +2223,30 @@ public class DatabaseStore {
 
                 statement.setString(index++, user.getExtra());
                 statement.setInt(index++, user.getType());
+                statement.setInt(index++, user.getDeleted());
                 statement.setLong(index++, user.getUpdateDt() == 0 ? System.currentTimeMillis() : user.getUpdateDt());
 
+                int count = statement.executeUpdate();
+                LOG.info("Update rows {}", count);
+            } catch (SQLException e) {
+                // TODO Auto-generated catch block
+                e.printStackTrace();
+                Utility.printExecption(LOG, e);
+                throw new Exception(e.getMessage());
+            } finally {
+                DBUtil.closeDB(connection, statement);
+            }
+    }
+
+    void deleteUserStatus(String userId) {
+        mScheduler.execute(()->{
+            Connection connection = null;
+            PreparedStatement statement = null;
+            try {
+                connection = DBUtil.getConnection();
+                String sql = "delete from t_user_status where _uid = ?";
+                statement = connection.prepareStatement(sql);
+                statement.setString(1, userId);
                 int count = statement.executeUpdate();
                 LOG.info("Update rows {}", count);
             } catch (SQLException e) {
@@ -1659,6 +2351,7 @@ public class DatabaseStore {
                 ", `_social`" +
                 ", `_extra`" +
                 ", `_type`" +
+                ", `_deleted`" +
                 ", `_dt` from t_user where `_uid` = ?";
             statement = connection.prepareStatement(sql);
 
@@ -1712,6 +2405,9 @@ public class DatabaseStore {
 
                 int type = rs.getInt(index++);
                 builder.setType(type);
+
+                int deleted = rs.getInt(index++);
+                builder.setDeleted(deleted);
 
                 long longValue = rs.getLong(index++);
                 builder.setUpdateDt(longValue);
@@ -1774,13 +2470,40 @@ public class DatabaseStore {
         return null;
     }
 
+    Set<String> getAllEnds() {
+        Connection connection = null;
+        PreparedStatement statement = null;
+        ResultSet rs = null;
+        try {
+            connection = DBUtil.getConnection();
+            String sql = "select distinct(`_uid`) from t_user_session where `_deleted` = 0";
+            statement = connection.prepareStatement(sql);
+
+
+
+            rs = statement.executeQuery();
+            Set<String> out = new HashSet<>();
+            while (rs.next()) {
+                String uid = rs.getString(1);
+                out.add(uid);
+            }
+            return out;
+        } catch (SQLException e) {
+            // TODO Auto-generated catch block
+            e.printStackTrace();
+            Utility.printExecption(LOG, e);
+        } finally {
+            DBUtil.closeDB(connection, statement, rs);
+        }
+        return null;
+    }
     List<FriendData> getPersistFriends(String userId) {
         Connection connection = null;
         PreparedStatement statement = null;
         ResultSet rs = null;
         try {
             connection = DBUtil.getConnection();
-            String sql = "select `_friend_uid`, `_alias`, `_state`, `_dt` from t_friend where `_uid` = ?";
+            String sql = "select `_friend_uid`, `_alias`, `_state`, `_blacked`, `_dt`, `_extra` from t_friend where `_uid` = ?";
             statement = connection.prepareStatement(sql);
 
 
@@ -1794,9 +2517,11 @@ public class DatabaseStore {
                 String uid = rs.getString(1);
                 String alias = rs.getString(2);
                 int state = rs.getInt(3);
-                long timestamp = rs.getLong(4);
+                int blacked = rs.getInt(4);
+                long timestamp = rs.getLong(5);
+                String extra = rs.getString(6);
 
-                FriendData data = new FriendData(userId, uid, alias, state, timestamp);
+                FriendData data = new FriendData(userId, uid, alias, extra, state, blacked, timestamp);
                 out.add(data);
             }
             return out;
@@ -1810,19 +2535,72 @@ public class DatabaseStore {
         return null;
     }
 
+
+    void removeUserFriend(String userId) {
+        Connection connection = null;
+        PreparedStatement statement = null;
+        try {
+            connection = DBUtil.getConnection();
+            String sql = "update t_friend  set `_alias` = '', `_state` = 1, `_blacked` = 0, `_dt` = ?, `_extra` = 0 where `_uid` = ? or `_friend_uid` = ?";
+
+            statement = connection.prepareStatement(sql);
+            int index = 1;
+            statement.setLong(index++, System.currentTimeMillis());
+            statement.setString(index++, userId);
+            statement.setString(index++, userId);
+            int count = statement.executeUpdate();
+            LOG.info("Update rows {}", count);
+        } catch (SQLException e) {
+            // TODO Auto-generated catch block
+            e.printStackTrace();
+            Utility.printExecption(LOG, e);
+        } finally {
+            DBUtil.closeDB(connection, statement);
+        }
+    }
+
+    void removeUserFriendRequest(String userId) {
+        Connection connection = null;
+        PreparedStatement statement = null;
+        try {
+            connection = DBUtil.getConnection();
+            String sql = "delete from t_friend_request  where _uid = ? or _friend_uid = ?";
+
+            statement = connection.prepareStatement(sql);
+            int index = 1;
+            statement.setString(index++, userId);
+            statement.setString(index++, userId);
+            int count = statement.executeUpdate();
+            LOG.info("Update rows {}", count);
+        } catch (SQLException e) {
+            // TODO Auto-generated catch block
+            e.printStackTrace();
+            Utility.printExecption(LOG, e);
+        } finally {
+            DBUtil.closeDB(connection, statement);
+        }
+    }
+
     List<WFCMessage.FriendRequest> getPersistFriendRequests(String userId) {
         Connection connection = null;
         PreparedStatement statement = null;
         ResultSet rs = null;
         try {
             connection = DBUtil.getConnection();
-            String sql = "select   `_uid`" +
+            String sql = "select  `_uid`" +
                 ", `_friend_uid`" +
                 ", `_reason`" +
                 ", `_status`" +
                 ", `_dt`" +
                 ", `_from_read_status`" +
-                ", `_to_read_status` from t_friend_request where `_uid` = ? or `_friend_uid` = ?";
+                ", `_to_read_status` from t_friend_request where `_uid` = ? UNION ALL " +
+                "select   `_uid`" +
+                ", `_friend_uid`" +
+                ", `_reason`" +
+                ", `_status`" +
+                ", `_dt`" +
+                ", `_from_read_status`" +
+                ", `_to_read_status` from t_friend_request where `_friend_uid` = ?";
             statement = connection.prepareStatement(sql);
 
             int index = 1;
@@ -1874,7 +2652,6 @@ public class DatabaseStore {
     }
 
     void persistFriendRequestUnreadStatus(String userId, long readDt, long updateDt) {
-        mScheduler.execute(()->{
             Connection connection = null;
             PreparedStatement statement = null;
             try {
@@ -1901,11 +2678,9 @@ public class DatabaseStore {
             } finally {
                 DBUtil.closeDB(connection, statement);
             }
-        });
     }
     //
     void persistOrUpdateFriendRequest(final WFCMessage.FriendRequest request) {
-        mScheduler.execute(()->{
             Connection connection = null;
             PreparedStatement statement = null;
             try {
@@ -1942,20 +2717,20 @@ public class DatabaseStore {
             } finally {
                 DBUtil.closeDB(connection, statement);
             }
-        });
     }
 
     void persistOrUpdateFriendData(final FriendData request) {
-        mScheduler.execute(()->{
             Connection connection = null;
             PreparedStatement statement = null;
             try {
                 connection = DBUtil.getConnection();
-                String sql = "insert into t_friend (`_uid`, `_friend_uid`, `_alias`, `_state`, `_dt`) values(?, ?, ?, ?, ?)" +
+                String sql = "insert into t_friend (`_uid`, `_friend_uid`, `_alias`, `_state`, `_blacked`, `_dt`, `_extra`) values(?, ?, ?, ?, ?, ?, ?)" +
                     " ON DUPLICATE KEY UPDATE " +
                     "`_alias` = ?," +
                     "`_state` = ?," +
-                    "`_dt` = ?";
+                    "`_blacked` = ?," +
+                    "`_dt` = ?," +
+                    "`_extra` = ?";
 
 
                 statement = connection.prepareStatement(sql);
@@ -1964,10 +2739,14 @@ public class DatabaseStore {
                 statement.setString(index++, request.getFriendUid());
                 statement.setString(index++, request.getAlias());
                 statement.setInt(index++, request.getState());
+                statement.setInt(index++, request.getBlacked());
                 statement.setLong(index++, request.getTimestamp());
+                statement.setString(index++, request.getExtra());
                 statement.setString(index++, request.getAlias());
                 statement.setInt(index++, request.getState());
+                statement.setInt(index++, request.getBlacked());
                 statement.setLong(index++, request.getTimestamp());
+                statement.setString(index++, request.getExtra());
                 int count = statement.executeUpdate();
                 LOG.info("Update rows {}", count);
             } catch (SQLException e) {
@@ -1977,7 +2756,6 @@ public class DatabaseStore {
             } finally {
                 DBUtil.closeDB(connection, statement);
             }
-        });
     }
 
     boolean removeGroupInfoFromDB(String groupId) {
@@ -2025,7 +2803,6 @@ public class DatabaseStore {
 
     void updateChannelInfo(final WFCMessage.ChannelInfo channelInfo) {
         LOG.info("Database update channel info {} {}", channelInfo.getTargetId(), channelInfo.getUpdateDt());
-        mScheduler.execute(()->{
             Connection connection = null;
             PreparedStatement statement = null;
             try {
@@ -2088,7 +2865,6 @@ public class DatabaseStore {
             } finally {
                 DBUtil.closeDB(connection, statement);
             }
-        });
     }
 
     void removeChannelInfo(final String channelId) {
@@ -2259,7 +3035,7 @@ public class DatabaseStore {
             rs = statement.executeQuery();
             while (rs.next()) {
 
-                String value = rs.getString(index++);
+                String value = rs.getString(1);
                 if (!StringUtil.isNullOrEmpty(value)) {
                     out.add(value);
                 }
@@ -2414,7 +3190,7 @@ public class DatabaseStore {
 
         try {
             connection = DBUtil.getConnection();
-            String sql = "select `_word` from t_sensitiveword";
+            String sql = "select `_word` from t_sensitiveword order by `id` desc";
 
             statement = connection.prepareStatement(sql);
             rs = statement.executeQuery();
