@@ -16,6 +16,7 @@
 
 package io.moquette.persistence;
 
+import cn.wildfirechat.pojos.SystemSettingPojo;
 import cn.wildfirechat.proto.ProtoConstants;
 import cn.wildfirechat.proto.WFCMessage;
 import com.google.protobuf.ByteString;
@@ -24,14 +25,16 @@ import com.hazelcast.util.StringUtil;
 import com.xiaoleilu.loServer.model.FriendData;
 import cn.wildfirechat.pojos.InputOutputUserBlockStatus;
 import cn.wildfirechat.common.ErrorCode;
+import io.moquette.BrokerConstants;
+import io.moquette.server.Constants;
 import io.moquette.server.Server;
 import io.moquette.spi.IMatchingCondition;
 import io.moquette.spi.IMessagesStore;
 import io.moquette.spi.security.Tokenor;
 import io.moquette.spi.impl.subscriptions.Topic;
+import io.netty.handler.codec.mqtt.MqttVersion;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import sun.misc.BASE64Encoder;
 import win.liyufan.im.*;
 
 import java.security.MessageDigest;
@@ -47,12 +50,10 @@ import java.util.concurrent.locks.ReadWriteLock;
 import java.util.concurrent.locks.ReentrantReadWriteLock;
 import java.util.function.Consumer;
 
-
-import static cn.wildfirechat.proto.ProtoConstants.ChannelStatus.Channel_Status_Destoryed;
+import static cn.wildfirechat.proto.ProtoConstants.ChannelState.Channel_State_Mask_Deleted;
+import static cn.wildfirechat.proto.ProtoConstants.GroupMemberType.*;
 import static cn.wildfirechat.proto.ProtoConstants.ModifyChannelInfoType.*;
-import static cn.wildfirechat.proto.ProtoConstants.ModifyGroupInfoType.Modify_Group_Extra;
-import static cn.wildfirechat.proto.ProtoConstants.ModifyGroupInfoType.Modify_Group_Name;
-import static cn.wildfirechat.proto.ProtoConstants.ModifyGroupInfoType.Modify_Group_Portrait;
+import static cn.wildfirechat.proto.ProtoConstants.ModifyGroupInfoType.*;
 import static cn.wildfirechat.proto.ProtoConstants.PersistFlag.Transparent;
 import static io.moquette.BrokerConstants.*;
 import static io.moquette.server.Constants.MAX_CHATROOM_MESSAGE_QUEUE;
@@ -62,7 +63,6 @@ import static win.liyufan.im.MyInfoType.*;
 public class MemoryMessagesStore implements IMessagesStore {
     private static final String MESSAGES_MAP = "messages_map";
     private static final String GROUPS_MAP = "groups_map";
-    private static final String GROUP_ID_COUNTER = "group_id_counter";
     static int dumy = 0;
     static final String GROUP_MEMBERS = "group_members";
 
@@ -83,6 +83,10 @@ public class MemoryMessagesStore implements IMessagesStore {
     private static final String CHANNELS = "channels_map";
 
     private static final String CHANNEL_LISTENERS = "channel_listeners";
+
+    private static boolean IS_MESSAGE_ROAMING = true;
+
+    private static boolean IS_MESSAGE_REMOTE_HISTORY_MESSAGE = true;
 
     static final String USER_ROBOTS = "user_robots";
     static final String USER_THINGS = "user_things";
@@ -114,23 +118,73 @@ public class MemoryMessagesStore implements IMessagesStore {
     private ConcurrentHashMap<String, Boolean> userPushHiddenDetail = new ConcurrentHashMap<>();
     private ConcurrentHashMap<String, Boolean> userConvSlientMap = new ConcurrentHashMap<>();
 
+    private long mFriendRequestDuration = 7 * 24 * 60 * 60 * 1000;
+    private long mFriendRejectDuration = 30 * 24 * 60 * 60 * 1000;
+    private long mFriendRequestExpiration = 7 * 24 * 60 * 60 * 1000;
+
+    private boolean mDisableStrangerChat = false;
+
+    private long mChatroomParticipantIdleTime = 900000;
+    private boolean mChatroomRejoinWhenActive = true;
+
     MemoryMessagesStore(Server server, DatabaseStore databaseStore) {
         m_Server = server;
         this.databaseStore = databaseStore;
+        IS_MESSAGE_ROAMING = "1".equals(m_Server.getConfig().getProperty(MESSAGE_ROAMING));
+        IS_MESSAGE_REMOTE_HISTORY_MESSAGE = "1".equals(m_Server.getConfig().getProperty(MESSAGE_Remote_History_Message));
+        Constants.MAX_MESSAGE_QUEUE = Integer.parseInt(m_Server.getConfig().getProperty(MESSAGE_Max_Queue));
+
+        try {
+            mDisableStrangerChat = Boolean.parseBoolean(m_Server.getConfig().getProperty(BrokerConstants.MESSAGE_Disable_Stranger_Chat));
+        } catch (Exception e) {
+            e.printStackTrace();
+            Utility.printExecption(LOG, e);
+        }
+
+        try {
+            mFriendRequestDuration = Long.parseLong(m_Server.getConfig().getProperty(FRIEND_Repeat_Request_Duration));
+        } catch (Exception e) {
+            e.printStackTrace();
+            Utility.printExecption(LOG, e);
+        }
+
+        try {
+            mFriendRejectDuration = Long.parseLong(m_Server.getConfig().getProperty(FRIEND_Reject_Request_Duration));
+        } catch (Exception e) {
+            e.printStackTrace();
+            Utility.printExecption(LOG, e);
+        }
+
+        try {
+            mFriendRequestExpiration = Long.parseLong(m_Server.getConfig().getProperty(FRIEND_Request_Expiration_Duration));
+        } catch (Exception e) {
+            e.printStackTrace();
+            Utility.printExecption(LOG, e);
+        }
+
+        try {
+            mChatroomRejoinWhenActive = Boolean.parseBoolean(m_Server.getConfig().getProperty(BrokerConstants.CHATROOM_Rejoin_When_Active));
+        } catch (Exception e) {
+            e.printStackTrace();
+            Utility.printExecption(LOG, e);
+        }
+
+        try {
+            mChatroomParticipantIdleTime = Long.parseLong(m_Server.getConfig().getProperty(CHATROOM_Participant_Idle_Time, "900000"));
+        } catch (Exception e) {
+            e.printStackTrace();
+            Utility.printExecption(LOG, e);
+        }
     }
 
     @Override
     public void initStore() {
-        //TODO reload data from mysql
-        HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
-        MultiMap<String, WFCMessage.GroupMember> groupMembers = hzInstance.getMultiMap(MemoryMessagesStore.GROUP_MEMBERS);
-        if (groupMembers.size() == 0) {
-            databaseStore.reloadGroupMemberFromDB(hzInstance);
-            databaseStore.reloadFriendsFromDB(hzInstance);
-            databaseStore.reloadFriendRequestsFromDB(hzInstance);
-        }
-
         updateSensitiveWord();
+    }
+
+    private Collection<WFCMessage.GroupMember> loadGroupMemberFromDB(HazelcastInstance hzInstance, String groupId) {
+        Collection<WFCMessage.GroupMember> members = databaseStore.reloadGroupMemberFromDB(hzInstance, groupId);
+        return members;
     }
 
     private void updateSensitiveWord() {
@@ -170,11 +224,30 @@ public class MemoryMessagesStore implements IMessagesStore {
     }
 
     @Override
-    public int getNotifyReceivers(String fromUser, WFCMessage.Message message, Set<String> notifyReceivers) {
+    public void storeSensitiveMessage(WFCMessage.Message message) {
+        databaseStore.persistSensitiveMessage(message);
+    }
+
+
+    @Override
+    public int getNotifyReceivers(String fromUser, WFCMessage.Message.Builder messageBuilder, Set<String> notifyReceivers, boolean ignoreMsg) {
+        WFCMessage.Message message = messageBuilder.build();
         HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
         int type = message.getConversation().getType();
+        int pullType = ProtoConstants.PullType.Pull_Normal;
 
-        int pullType = 0;
+        if (ignoreMsg) {
+            if (type == ProtoConstants.ConversationType.ConversationType_ChatRoom) {
+                pullType = ProtoConstants.PullType.Pull_ChatRoom;
+            }
+
+            if (message.getContent().getPersistFlag() != Transparent) {
+                notifyReceivers.add(fromUser);
+            }
+            return pullType;
+        }
+
+
         if (type == ProtoConstants.ConversationType.ConversationType_Private) {
             notifyReceivers.add(fromUser);
             notifyReceivers.add(message.getConversation().getTarget());
@@ -184,13 +257,25 @@ public class MemoryMessagesStore implements IMessagesStore {
 
             if (!StringUtil.isNullOrEmpty(message.getToUser())) {
                 notifyReceivers.add(message.getToUser());
-            } else if(!message.getToList().isEmpty()) {
-                notifyReceivers.addAll(message.getToList());
+            } else if(message.getToList()!=null && !message.getToList().isEmpty()) {
+                MultiMap<String, WFCMessage.GroupMember> groupMembers = hzInstance.getMultiMap(GROUP_MEMBERS);
+                Collection<WFCMessage.GroupMember> members = groupMembers.get(message.getConversation().getTarget());
+                if (members == null || members.size() == 0) {
+                    members = loadGroupMemberFromDB(hzInstance, message.getConversation().getTarget());
+                }
+                for (WFCMessage.GroupMember member : members) {
+                    if (member.getType() != GroupMemberType_Removed && message.getToList().contains(member.getMemberId())) {
+                        notifyReceivers.add(member.getMemberId());
+                    }
+                }
             } else {
                 MultiMap<String, WFCMessage.GroupMember> groupMembers = hzInstance.getMultiMap(GROUP_MEMBERS);
                 Collection<WFCMessage.GroupMember> members = groupMembers.get(message.getConversation().getTarget());
+                if (members == null || members.size() == 0) {
+                    members = loadGroupMemberFromDB(hzInstance, message.getConversation().getTarget());
+                }
                 for (WFCMessage.GroupMember member : members) {
-                    if (member.getType() != ProtoConstants.GroupMemberType.GroupMemberType_Removed) {
+                    if (member.getType() != GroupMemberType_Removed) {
                         notifyReceivers.add(member.getMemberId());
                     }
                 }
@@ -219,14 +304,19 @@ public class MemoryMessagesStore implements IMessagesStore {
             if (channelInfo != null) {
                 notifyReceivers.add(fromUser);
                 if (channelInfo.getOwner().equals(fromUser)) {
-                    if (StringUtil.isNullOrEmpty(message.getToUser())) {
-                        MultiMap<String, String> listeners = hzInstance.getMultiMap(CHANNEL_LISTENERS);
-                        notifyReceivers.addAll(listeners.get(message.getConversation().getTarget()));
-                    } else {
-                        MultiMap<String, String> listeners = hzInstance.getMultiMap(CHANNEL_LISTENERS);
-                        if (listeners.values().contains(message.getToUser())) {
+                    Collection<String> listeners = getChannelListener(message.getConversation().getTarget());
+                    if (!StringUtil.isNullOrEmpty(message.getToUser())) {
+                        if (listeners.contains(message.getToUser())) {
                             notifyReceivers.add(message.getToUser());
                         }
+                    } else if(message.getToList() != null && !message.getToList().isEmpty()) {
+                        for (String to:message.getToList()) {
+                            if (listeners.contains(to)) {
+                                notifyReceivers.add(to);
+                            }
+                        }
+                    } else {
+                        notifyReceivers.addAll(listeners);
                     }
                 } else {
                     if (StringUtil.isNullOrEmpty(channelInfo.getCallback()) || channelInfo.getAutomatic() == 0) {
@@ -245,6 +335,10 @@ public class MemoryMessagesStore implements IMessagesStore {
         return pullType;
     }
 
+    @Override
+    public Set<String> getAllEnds() {
+        return databaseStore.getAllEnds();
+    }
     @Override
     public WFCMessage.PullMessageResult fetchMessage(String user, String exceptClientId, long fromMessageId, int pullType) {
         WFCMessage.PullMessageResult.Builder builder = WFCMessage.PullMessageResult.newBuilder();
@@ -306,6 +400,10 @@ public class MemoryMessagesStore implements IMessagesStore {
                 });
             }
 
+            boolean noRoaming = false;
+            if (pullType == ProtoConstants.PullType.Pull_Normal && fromMessageId == 0 && !IS_MESSAGE_ROAMING) {
+                noRoaming = true;
+            }
             while (true) {
                 Map.Entry<Long, Long> entry = maps.higherEntry(current);
                 if (entry == null) {
@@ -315,9 +413,6 @@ public class MemoryMessagesStore implements IMessagesStore {
                 long targetMessageId = entry.getValue();
 
                 MessageBundle bundle = mIMap.get(targetMessageId);
-                if (bundle == null) {
-                    bundle = databaseStore.getMessage(targetMessageId);
-                }
 
                 if (bundle != null) {
                     if (exceptClientId == null || !exceptClientId.equals(bundle.getFromClientId()) || !user.equals(bundle.getFromUser())) {
@@ -328,8 +423,21 @@ public class MemoryMessagesStore implements IMessagesStore {
                             }
                         }
 
+                        if (noRoaming && (System.currentTimeMillis() - bundle.getMessage().getServerTimestamp() > 5 * 60 * 1000)) {
+                            continue;
+                        }
+
+                        if (bundle.getMessage().getContent().getExpireDuration() > 0) {
+                            if (System.currentTimeMillis() < bundle.getMessage().getServerTimestamp() + bundle.getMessage().getContent().getExpireDuration()) {
+                                continue;
+                            }
+                        }
+
                         size += bundle.getMessage().getSerializedSize();
-                        if (size >= 1 * 1024 * 1024) { //3M
+                        if (size >= 512 * 1024) { //3M
+                            if(builder.getMessageCount() == 0){
+                                builder.addMessage(bundle.getMessage());
+                            }
                             break;
                         }
                         builder.addMessage(bundle.getMessage());
@@ -353,7 +461,12 @@ public class MemoryMessagesStore implements IMessagesStore {
     @Override
     public WFCMessage.PullMessageResult loadRemoteMessages(String user, WFCMessage.Conversation conversation, long beforeUid, int count) {
         WFCMessage.PullMessageResult.Builder builder = WFCMessage.PullMessageResult.newBuilder();
-        List<WFCMessage.Message> messages = databaseStore.loadRemoteMessages(user, conversation, beforeUid, count);
+        List<WFCMessage.Message> messages;
+        if (IS_MESSAGE_REMOTE_HISTORY_MESSAGE) {
+           messages = databaseStore.loadRemoteMessages(user, conversation, beforeUid, count);
+        } else {
+           messages = new ArrayList<>();
+        }
         builder.setCurrent(0).setHead(0);
         if(messages != null) {
             builder.addAllMessage(messages);
@@ -407,10 +520,6 @@ public class MemoryMessagesStore implements IMessagesStore {
                 long targetMessageId = entry.getValue();
 
                 MessageBundle bundle = mIMap.get(targetMessageId);
-                if (bundle == null) {
-                    bundle = databaseStore.getMessage(targetMessageId);
-                }
-
                 if (bundle != null) {
                     if (exceptClientId == null || !exceptClientId.equals(bundle.getFromClientId()) || !fromUser.equals(bundle.getFromUser())) {
                         size += bundle.getMessage().getSerializedSize();
@@ -507,13 +616,29 @@ public class MemoryMessagesStore implements IMessagesStore {
     @Override
     public boolean checkUserClientInChatroom(String user, String clientId, String chatroomId) {
         MemorySessionStore.Session session = m_Server.getStore().sessionsStore().getSession(clientId);
-        if (session == null || System.currentTimeMillis() - session.getLastChatroomActiveTime() > 5 * 60 * 1000) {
-            handleQuitChatroom(user, clientId, chatroomId);
-            return false;
-        }
 
         String existChatroomId = (String)m_Server.getHazelcastInstance().getMap(USER_CHATROOM).get(user);
-        if (StringUtil.isNullOrEmpty(existChatroomId) && (chatroomId == null || !existChatroomId.equals(chatroomId))) {
+        if (chatroomId == null) {
+            if (existChatroomId == null) {
+                return false;
+            } else {
+                chatroomId = existChatroomId;
+            }
+        }
+
+        if (StringUtil.isNullOrEmpty(existChatroomId) || !existChatroomId.equals(chatroomId)) {
+            if (mChatroomRejoinWhenActive) {
+                if (!StringUtil.isNullOrEmpty(existChatroomId)) {
+                    handleQuitChatroom(user, clientId, existChatroomId);
+                }
+                handleJoinChatroom(user, clientId, chatroomId);
+            } else {
+                return false;
+            }
+        }
+
+        if (!mChatroomRejoinWhenActive && !checkChatroomParticipantIdelTime(session)) {
+            handleQuitChatroom(user, clientId, chatroomId);
             return false;
         }
 
@@ -599,19 +724,25 @@ public class MemoryMessagesStore implements IMessagesStore {
         mIMap.put(groupId, groupInfo);
         MultiMap<String, WFCMessage.GroupMember> groupMembers = hzInstance.getMultiMap(GROUP_MEMBERS);
 
+        List<WFCMessage.GroupMember> updatedMemberList = new ArrayList<>();
         for (WFCMessage.GroupMember member : memberList) {
-            member = member.toBuilder().setUpdateDt(dt).build();
+            if (member.getMemberId().equals(groupInfo.getOwner())) {
+                member = member.toBuilder().setUpdateDt(dt).setType(ProtoConstants.GroupMemberType.GroupMemberType_Owner).build();
+            } else {
+                member = member.toBuilder().setUpdateDt(dt).build();
+            }
             groupMembers.put(groupId, member);
+            updatedMemberList.add(member);
         }
 
-        databaseStore.persistGroupMember(groupId, memberList);
+        databaseStore.persistGroupMember(groupId, updatedMemberList);
 
         return groupInfo;
     }
 
 
     @Override
-    public ErrorCode addGroupMembers(String operator, String groupId, List<WFCMessage.GroupMember> memberList) {
+    public ErrorCode addGroupMembers(String operator, boolean isAdmin, String groupId, List<WFCMessage.GroupMember> memberList) {
         HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
         IMap<String, WFCMessage.GroupInfo> mIMap = hzInstance.getMap(GROUPS_MAP);
 
@@ -619,24 +750,61 @@ public class MemoryMessagesStore implements IMessagesStore {
         if (groupInfo == null) {
             return ErrorCode.ERROR_CODE_NOT_EXIST;
         }
-        if (groupInfo.getType() == ProtoConstants.GroupType.GroupType_Restricted && (groupInfo.getOwner() == null || !groupInfo.getOwner().equals(operator))) {
-            return ErrorCode.ERROR_CODE_NOT_RIGHT;
-        }
 
-        MultiMap<String, WFCMessage.GroupMember> groupMembers = hzInstance.getMultiMap(GROUP_MEMBERS);
+
+        if (!isAdmin) {
+            boolean isMember = false;
+            boolean isManager = false;
+            WFCMessage.GroupMember gm = getGroupMember(groupId, operator);
+            if (gm != null) {
+                if (gm.getType() == GroupMemberType_Removed && !(memberList.size() == 1 && operator.equals(memberList.get(0).getMemberId()))) {
+                    return ErrorCode.ERROR_CODE_NOT_IN_GROUP;
+                } else if (gm.getType() == GroupMemberType_Silent) {
+                    return ErrorCode.ERROR_CODE_NOT_RIGHT;
+                }
+                isManager = (gm.getType() == GroupMemberType_Manager || gm.getType() == GroupMemberType_Owner);
+
+                if (gm.getType() != GroupMemberType_Removed) {
+                    isMember = true;
+                }
+            }
+
+            if (groupInfo.getType() == ProtoConstants.GroupType.GroupType_Restricted && ((groupInfo.getOwner() == null || !groupInfo.getOwner().equals(operator)) && !isManager)) {
+                if (groupInfo.getJoinType() == 2) {
+                    return ErrorCode.ERROR_CODE_NOT_RIGHT;
+                } else if (groupInfo.getJoinType() == 1) {
+                    if (memberList.size() == 1 && operator.equals(memberList.get(0).getMemberId()))
+                    return ErrorCode.ERROR_CODE_NOT_RIGHT;
+                }
+            }
+
+            if (!isMember && !(memberList.size() == 1 && operator.equals(memberList.get(0).getMemberId()))) {
+                return ErrorCode.ERROR_CODE_NOT_IN_GROUP;
+            }
+        }
 
         long updateDt = System.currentTimeMillis();
 
         List<WFCMessage.GroupMember> tmp = new ArrayList<>();
         ArrayList<String> newInviteUsers = new ArrayList<>();
         for (WFCMessage.GroupMember member : memberList) {
-            member = member.toBuilder().setType(ProtoConstants.GroupMemberType.GroupMemberType_Normal).setUpdateDt(updateDt).setAlias("").build();
+            if (member.getMemberId().equals(groupInfo.getOwner())) {
+                member = member.toBuilder().setType(GroupMemberType_Owner).setUpdateDt(updateDt).setAlias("").build();
+            } else {
+                member = member.toBuilder().setType(GroupMemberType_Normal).setUpdateDt(updateDt).setAlias("").build();
+            }
             tmp.add(member);
             newInviteUsers.add(member.getMemberId());
         }
         memberList = tmp;
 
-        for (WFCMessage.GroupMember member : groupMembers.get(groupId)) {
+        MultiMap<String, WFCMessage.GroupMember> groupMembers = hzInstance.getMultiMap(GROUP_MEMBERS);
+        Collection<WFCMessage.GroupMember> members = groupMembers.get(groupId);
+        if (members == null || members.size() == 0) {
+            members = loadGroupMemberFromDB(hzInstance, groupId);
+        }
+
+        for (WFCMessage.GroupMember member : members) {
             if (newInviteUsers.contains(member.getMemberId())) {
                 groupMembers.remove(groupId, member);
             }
@@ -648,7 +816,7 @@ public class MemoryMessagesStore implements IMessagesStore {
 
         int count = 0;
         for (WFCMessage.GroupMember member : groupMembers.get(groupId)) {
-            if (member.getType() != ProtoConstants.GroupMemberType.GroupMemberType_Removed) {
+            if (member.getType() != GroupMemberType_Removed) {
                 count++;
             }
         }
@@ -660,44 +828,34 @@ public class MemoryMessagesStore implements IMessagesStore {
     }
 
     @Override
-    public ErrorCode kickoffGroupMembers(String operator, String groupId, List<String> memberList) {
-        HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
-        IMap<String, WFCMessage.GroupInfo> mIMap = hzInstance.getMap(GROUPS_MAP);
+    public ErrorCode kickoffGroupMembers(String operator, boolean isAdmin, String groupId, List<String> memberList) {
+        removeGroupMember(groupId, memberList);
+        removeFavGroup(groupId, memberList);
+        removeGroupUserSettings(groupId, memberList);
+        return ErrorCode.ERROR_CODE_SUCCESS;
+    }
 
-        WFCMessage.GroupInfo groupInfo = mIMap.get(groupId);
-        if (groupInfo == null) {
-            return ErrorCode.ERROR_CODE_NOT_EXIST;
-        }
-        if ((groupInfo.getType() == ProtoConstants.GroupType.GroupType_Restricted || groupInfo.getType() == ProtoConstants.GroupType.GroupType_Normal)
-            && (groupInfo.getOwner() == null || !groupInfo.getOwner().equals(operator))) {
-            return ErrorCode.ERROR_CODE_NOT_RIGHT;
-        }
+    void removeGroupMember(String groupId, List<String> memberIds) {
+        HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
+        databaseStore.removeGroupMember(groupId, memberIds);
 
         MultiMap<String, WFCMessage.GroupMember> groupMembers = hzInstance.getMultiMap(GROUP_MEMBERS);
+        groupMembers.remove(groupId);
+        IMap<String, WFCMessage.GroupInfo> mIMap = hzInstance.getMap(GROUPS_MAP);
+        mIMap.evict(groupId);
 
-        int removeCount = 0;
-        long updateDt = System.currentTimeMillis();
-        ArrayList<WFCMessage.GroupMember> list = new ArrayList<>();
-        List<WFCMessage.GroupMember> allMembers = new ArrayList<>(groupMembers.get(groupId));
-        for (WFCMessage.GroupMember member : allMembers) {
-            if (memberList.contains(member.getMemberId())) {
-                boolean removed = groupMembers.remove(groupId, member);
-                if (removed) {
-                    removeCount++;
-                    member = member.toBuilder().setType(ProtoConstants.GroupMemberType.GroupMemberType_Removed).setUpdateDt(updateDt).build();
-                    groupMembers.put(groupId, member);
-                    list.add(member);
-                }
-            }
+    }
+
+    void removeFavGroup(String groupId, List<String> memberIds) {
+        HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
+        MultiMap<String, WFCMessage.UserSettingEntry> userSettingMap = hzInstance.getMultiMap(USER_SETTING);
+
+        databaseStore.removeFavGroup(groupId, memberIds);
+
+        for (String member : memberIds) {
+            userSettingMap.remove(member);
         }
 
-        if (removeCount > 0) {
-            databaseStore.persistGroupMember(groupId, list);
-            databaseStore.updateGroupMemberCountDt(groupId, groupInfo.getMemberCount()-removeCount, updateDt);
-            mIMap.put(groupId, groupInfo.toBuilder().setMemberUpdateDt(updateDt).setUpdateDt(updateDt).setMemberCount(groupInfo.getMemberCount() - removeCount).build());
-        }
-
-        return ErrorCode.ERROR_CODE_SUCCESS;
     }
 
     @Override
@@ -708,8 +866,11 @@ public class MemoryMessagesStore implements IMessagesStore {
         WFCMessage.GroupInfo groupInfo = mIMap.get(groupId);
         if (groupInfo == null) {
             MultiMap<String, WFCMessage.GroupMember> groupMembers = hzInstance.getMultiMap(GROUP_MEMBERS);
-            for (WFCMessage.GroupMember member : groupMembers.get(groupId)
-                ) {
+            Collection<WFCMessage.GroupMember> members = groupMembers.get(groupId);
+            if (members == null || members.size() == 0) {
+                members = loadGroupMemberFromDB(hzInstance, groupId);
+            }
+            for (WFCMessage.GroupMember member :members) {
                 if (member.getMemberId().equals(operator)) {
                     groupMembers.remove(groupId, member);
                     break;
@@ -719,33 +880,60 @@ public class MemoryMessagesStore implements IMessagesStore {
         }
 
         if (groupInfo.getType() != ProtoConstants.GroupType.GroupType_Free && groupInfo.getOwner() != null && groupInfo.getOwner().equals(operator)) {
-            return ErrorCode.ERROR_CODE_NOT_RIGHT;
-        }
-        MultiMap<String, WFCMessage.GroupMember> groupMembers = hzInstance.getMultiMap(GROUP_MEMBERS);
+            MultiMap<String, WFCMessage.GroupMember> groupMembers = hzInstance.getMultiMap(GROUP_MEMBERS);
+            Collection<WFCMessage.GroupMember> members = groupMembers.get(groupId);
+            if (members == null || members.size() == 0) {
+                members = loadGroupMemberFromDB(hzInstance, groupId);
+            }
 
-        long updateDt = System.currentTimeMillis();
-        boolean removed = false;
-        for (WFCMessage.GroupMember member : groupMembers.get(groupId)
-            ) {
-            if (member.getMemberId().equals(operator)) {
-                removed = groupMembers.remove(groupId, member);
-                if (removed) {
-                    ArrayList<WFCMessage.GroupMember> list = new ArrayList<>();
-                    list.add(member);
-                    databaseStore.persistGroupMember(groupId, list);
-
-                    databaseStore.updateGroupMemberCountDt(groupId, groupInfo.getMemberCount()-1, updateDt);
-                    member = member.toBuilder().setType(ProtoConstants.GroupMemberType.GroupMemberType_Removed).setUpdateDt(updateDt).build();
-                    groupMembers.put(groupId, member);
+            WFCMessage.GroupMember newOwner = null;
+            for (WFCMessage.GroupMember member :members) {
+                if (!member.getMemberId().equals(operator) && member.getType() != GroupMemberType_Removed) {
+                    newOwner = member;
+                    break;
                 }
-                break;
+            }
+
+            if (newOwner == null) {
+                 return dismissGroup(operator, groupId, false);
+            }
+
+            transferGroup(operator, groupId, newOwner.getMemberId(), false);
+
+            try {
+                Thread.sleep(500);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
             }
         }
 
-        if (removed) {
-            mIMap.put(groupId, groupInfo.toBuilder().setMemberUpdateDt(updateDt).setUpdateDt(updateDt).setMemberCount(groupInfo.getMemberCount() - 1).build());
-        }
+        removeGroupMember(groupId, Arrays.asList(operator));
+        removeFavGroup(groupId, Arrays.asList(operator));
+        removeGroupUserSettings(groupId, Arrays.asList(operator));
         return ErrorCode.ERROR_CODE_SUCCESS;
+    }
+
+    @Override
+    public void clearUserGroups(String userId) {
+        Set<String> groupIds = databaseStore.getUserGroupIds(userId);
+        int[] removedCount = new int[1];
+        for (String groupId : groupIds) {
+            removedCount[0] = 0;
+            ErrorCode errorCode = quitGroup(userId, groupId);
+            LOG.info("clear user {} group {} result {}", userId, groupId, errorCode);
+        }
+    }
+
+
+    private void removeGroupUserSettings(String groupId, List<String> users) {
+        HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
+        MultiMap<String, WFCMessage.UserSettingEntry> userSettingMap = hzInstance.getMultiMap(USER_SETTING);
+
+        databaseStore.removeGroupUserSettings(groupId, users);
+        for (String userId:users) {
+            userSettingMap.remove(userId);
+        }
+
     }
 
     @Override
@@ -770,16 +958,30 @@ public class MemoryMessagesStore implements IMessagesStore {
 
         MultiMap<String, WFCMessage.GroupMember> groupMembers = hzInstance.getMultiMap(GROUP_MEMBERS);
 
+        Collection<WFCMessage.GroupMember> members = groupMembers.get(groupId);
+        if (members == null || members.size() == 0) {
+            members = loadGroupMemberFromDB(hzInstance, groupId);
+        }
+
         groupMembers.remove(groupId);
         mIMap.remove(groupId);
 
         databaseStore.removeGroupMemberFromDB(groupId);
 
+        ArrayList<String> ids = new ArrayList<>();
+        if (members != null) {
+            for (WFCMessage.GroupMember member : members) {
+                ids.add(member.getMemberId());
+            }
+        }
+        removeFavGroup(groupId, ids);
+        removeGroupUserSettings(groupId, ids);
+
         return ErrorCode.ERROR_CODE_SUCCESS;
     }
 
     @Override
-    public ErrorCode modifyGroupInfo(String operator, String groupId, int modifyType, String value) {
+    public ErrorCode modifyGroupInfo(String operator, String groupId, int modifyType, String value, boolean isAdmin) {
 
         HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
         IMap<String, WFCMessage.GroupInfo> mIMap = hzInstance.getMap(GROUPS_MAP);
@@ -790,21 +992,35 @@ public class MemoryMessagesStore implements IMessagesStore {
             return ErrorCode.ERROR_CODE_NOT_EXIST;
         }
 
-        if ((oldInfo.getType() == ProtoConstants.GroupType.GroupType_Restricted)
-            && (oldInfo.getOwner() == null || !oldInfo.getOwner().equals(operator))) {
-            return ErrorCode.ERROR_CODE_NOT_RIGHT;
-        }
-
-        if (oldInfo.getType() == ProtoConstants.GroupType.GroupType_Normal) {
-            if (oldInfo.getOwner() == null) {
-                return ErrorCode.ERROR_CODE_NOT_RIGHT;
-            }
-            if (!oldInfo.getOwner().equals(operator)) {
-                if (modifyType == Modify_Group_Extra) {
+        if (!isAdmin) {
+            if (oldInfo.getType() == ProtoConstants.GroupType.GroupType_Restricted) {
+                boolean isAllow = false;
+                if ((oldInfo.getOwner() != null && oldInfo.getOwner().equals(operator))) {
+                    isAllow = true;
+                } else {
+                    WFCMessage.GroupMember gm = getGroupMember(groupId, operator);
+                    if (gm != null && gm.getType() == GroupMemberType_Manager) {
+                        isAllow = true;
+                    }
+                }
+                if (!isAllow) {
                     return ErrorCode.ERROR_CODE_NOT_RIGHT;
                 }
             }
+
+            if (oldInfo.getType() == ProtoConstants.GroupType.GroupType_Normal) {
+                if (oldInfo.getOwner() == null) {
+                    return ErrorCode.ERROR_CODE_NOT_RIGHT;
+                }
+                if (!oldInfo.getOwner().equals(operator)) {
+                    if (modifyType == Modify_Group_Extra) {
+                        return ErrorCode.ERROR_CODE_NOT_RIGHT;
+                    }
+                }
+            }
         }
+
+
 
         WFCMessage.GroupInfo.Builder newInfoBuilder = oldInfo.toBuilder();
 
@@ -814,6 +1030,16 @@ public class MemoryMessagesStore implements IMessagesStore {
             newInfoBuilder.setPortrait(value);
         else if(modifyType == Modify_Group_Extra)
             newInfoBuilder.setExtra(value);
+        else if(modifyType == Modify_Group_Mute)
+            newInfoBuilder.setMute(Integer.parseInt(value));
+        else if(modifyType == Modify_Group_JoinType)
+            newInfoBuilder.setJoinType(Integer.parseInt(value));
+        else if(modifyType == Modify_Group_PrivateChat)
+            newInfoBuilder.setPrivateChat(Integer.parseInt(value));
+        else if(modifyType == Modify_Group_Searchable)
+            newInfoBuilder.setSearchable(Integer.parseInt(value));
+        else
+            return ErrorCode.INVALID_PARAMETER;
 
 
         newInfoBuilder.setUpdateDt(System.currentTimeMillis());
@@ -839,8 +1065,10 @@ public class MemoryMessagesStore implements IMessagesStore {
         long updateDt = System.currentTimeMillis();
         MultiMap<String, WFCMessage.GroupMember> groupMembers = hzInstance.getMultiMap(GROUP_MEMBERS);
         Collection<WFCMessage.GroupMember> members = groupMembers.get(groupId);
-        for (WFCMessage.GroupMember member : members
-            ) {
+        if (members == null || members.size() == 0) {
+            members = loadGroupMemberFromDB(hzInstance, groupId);
+        }
+        for (WFCMessage.GroupMember member : members) {
             if (member.getMemberId().equals(operator)) {
                 groupMembers.remove(groupId, member);
                 member = member.toBuilder().setAlias(alias).setUpdateDt(updateDt).build();
@@ -884,13 +1112,12 @@ public class MemoryMessagesStore implements IMessagesStore {
         IMap<String, WFCMessage.GroupInfo> mIMap = hzInstance.getMap(GROUPS_MAP);
 
         WFCMessage.GroupInfo groupInfo = mIMap.get(groupId);
-        if (groupInfo == null) {
-            groupInfo = databaseStore.getPersistGroupInfo(groupId);
-            if (groupInfo != null) {
-                mIMap.put(groupId, groupInfo);
-            }
-        }
         return groupInfo;
+    }
+
+    @Override
+    public Set<String> getUserGroupIds(String userId) {
+        return databaseStore.getUserGroupIds(userId);
     }
 
     @Override
@@ -906,9 +1133,39 @@ public class MemoryMessagesStore implements IMessagesStore {
         }
 
         MultiMap<String, WFCMessage.GroupMember> groupMembers = hzInstance.getMultiMap(GROUP_MEMBERS);
+        Collection<WFCMessage.GroupMember> memberCollection = groupMembers.get(groupId);
+        if (memberCollection == null || memberCollection.size() == 0) {
+            memberCollection = loadGroupMemberFromDB(hzInstance, groupId);
+        }
+        for (WFCMessage.GroupMember member:memberCollection) {
+            if (member.getUpdateDt() > maxDt) {
+                members.add(member);
+            }
+        }
 
-        members.addAll(groupMembers.get(groupId));
         return ErrorCode.ERROR_CODE_SUCCESS;
+    }
+
+    @Override
+    public WFCMessage.GroupMember getGroupMember(String groupId, String memberId) {
+        HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
+
+        MultiMap<String, WFCMessage.GroupMember> groupMembers = hzInstance.getMultiMap(GROUP_MEMBERS);
+
+        Collection<WFCMessage.GroupMember> members = groupMembers.get(groupId);
+        if (members == null || members.size() == 0) {
+            members = loadGroupMemberFromDB(hzInstance, groupId);
+        }
+
+        if (members != null) {
+            for (WFCMessage.GroupMember gm : members) {
+                if (gm.getMemberId().equals(memberId)) {
+                    return gm;
+                }
+            }
+        }
+
+        return null;
     }
 
 
@@ -930,11 +1187,73 @@ public class MemoryMessagesStore implements IMessagesStore {
         }
 
         //check the new owner is in member list? is that necessary?
-
-        groupInfo = groupInfo.toBuilder().setOwner(newOwner).build();
-
+        long updateDt = System.currentTimeMillis();
+        groupInfo = groupInfo.toBuilder().setOwner(newOwner).setUpdateDt(updateDt).setMemberUpdateDt(updateDt).build();
         mIMap.set(groupId, groupInfo);
 
+        MultiMap<String, WFCMessage.GroupMember> groupMembers = hzInstance.getMultiMap(GROUP_MEMBERS);
+        Collection<WFCMessage.GroupMember> members = groupMembers.get(groupId);
+        if (members == null || members.size() == 0) {
+            members = loadGroupMemberFromDB(hzInstance, groupId);
+        }
+        int modifyMemeberCount = 0;
+        for (WFCMessage.GroupMember member : members) {
+            if (modifyMemeberCount == 2) {
+                break;
+            }
+            if (newOwner.equals(member.getMemberId())) {
+                groupMembers.remove(groupId, member);
+                member = member.toBuilder().setType(GroupMemberType_Owner).setUpdateDt(updateDt).build();
+                databaseStore.persistGroupMember(groupId, Arrays.asList(member));
+                groupMembers.put(groupId, member);
+                modifyMemeberCount++;
+            } else if(member.getType() == GroupMemberType_Owner) {
+                groupMembers.remove(groupId, member);
+                member = member.toBuilder().setType(GroupMemberType_Normal).setUpdateDt(updateDt).build();
+                databaseStore.persistGroupMember(groupId, Arrays.asList(member));
+                groupMembers.put(groupId, member);
+                modifyMemeberCount++;
+            }
+        }
+
+
+        return ErrorCode.ERROR_CODE_SUCCESS;
+    }
+
+    @Override
+    public ErrorCode setGroupManager(String operator, String groupId, int type, List<String> userList, boolean isAdmin) {
+        HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
+        IMap<String, WFCMessage.GroupInfo> mIMap = hzInstance.getMap(GROUPS_MAP);
+
+
+        WFCMessage.GroupInfo groupInfo = mIMap.get(groupId);
+
+        if (groupInfo == null) {
+            return ErrorCode.ERROR_CODE_NOT_EXIST;
+        }
+
+        if (!isAdmin && (groupInfo.getType() == ProtoConstants.GroupType.GroupType_Restricted || groupInfo.getType() == ProtoConstants.GroupType.GroupType_Normal)
+            && (groupInfo.getOwner() == null || !groupInfo.getOwner().equals(operator))) {
+            return ErrorCode.ERROR_CODE_NOT_RIGHT;
+        }
+
+        long updateDt = System.currentTimeMillis();
+        MultiMap<String, WFCMessage.GroupMember> groupMembers = hzInstance.getMultiMap(GROUP_MEMBERS);
+        Collection<WFCMessage.GroupMember> members = groupMembers.get(groupId);
+        if (members == null || members.size() == 0) {
+            members = loadGroupMemberFromDB(hzInstance, groupId);
+        }
+        for (WFCMessage.GroupMember member : members) {
+            if (userList.contains(member.getMemberId())) {
+                groupMembers.remove(groupId, member);
+                member = member.toBuilder().setType(type == 0 ? ProtoConstants.GroupMemberType.GroupMemberType_Normal : ProtoConstants.GroupMemberType.GroupMemberType_Manager).setUpdateDt(updateDt).build();
+                databaseStore.persistGroupMember(groupId, Arrays.asList(member));
+                groupMembers.put(groupId, member);
+//                userList.remove(member.getMemberId());
+            }
+        }
+
+        mIMap.put(groupId, groupInfo.toBuilder().setUpdateDt(updateDt).setMemberUpdateDt(updateDt).build());
         return ErrorCode.ERROR_CODE_SUCCESS;
     }
 
@@ -944,10 +1263,12 @@ public class MemoryMessagesStore implements IMessagesStore {
         MultiMap<String, WFCMessage.GroupMember> groupMembers = hzInstance.getMultiMap(GROUP_MEMBERS);
 
         Collection<WFCMessage.GroupMember> members = groupMembers.get(groupId);
-
+        if (members == null || members.size() == 0) {
+            members = loadGroupMemberFromDB(hzInstance, groupId);
+        }
         for (WFCMessage.GroupMember member : members
             ) {
-            if (member.getMemberId().equals(memberId) && member.getType() != ProtoConstants.GroupMemberType.GroupMemberType_Removed)
+            if (member.getMemberId().equals(memberId) && member.getType() != GroupMemberType_Removed)
                 return true;
         }
 
@@ -955,23 +1276,53 @@ public class MemoryMessagesStore implements IMessagesStore {
     }
 
     @Override
-    public boolean isForbiddenInGroup(String memberId, String groupId) {
+    public ErrorCode canSendMessageInGroup(String memberId, String groupId) {
         HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
         MultiMap<String, WFCMessage.GroupMember> groupMembers = hzInstance.getMultiMap(GROUP_MEMBERS);
-
-        Collection<WFCMessage.GroupMember> members = groupMembers.get(groupId);
-
-        for (WFCMessage.GroupMember member : members
-            ) {
-            if (member.getMemberId().equals(memberId) && member.getType() == ProtoConstants.GroupMemberType.GroupMemberType_Silent)
-                return true;
+        IMap<String, WFCMessage.GroupInfo> groups = hzInstance.getMap(GROUPS_MAP);
+        WFCMessage.GroupInfo groupInfo = groups.get(groupId);
+        boolean isMute = false;
+        if (groupInfo != null) {
+            if (groupInfo.getOwner().equals(memberId)) {
+                return ErrorCode.ERROR_CODE_SUCCESS;
+            }
+            isMute = groupInfo.getMute()>0;
         }
 
-        return false;
+        Collection<WFCMessage.GroupMember> members = groupMembers.get(groupId);
+        if (members == null || members.size() == 0) {
+            members = loadGroupMemberFromDB(hzInstance, groupId);
+        }
+
+        boolean isInGroup = false;
+        for (WFCMessage.GroupMember member : members) {
+            if (member.getMemberId().equals(memberId)) {
+                if (member.getType() == GroupMemberType_Silent) {
+                    return ErrorCode.ERROR_CODE_NOT_RIGHT;
+                }
+
+                if (isMute && member.getType() != GroupMemberType_Manager && member.getType() != GroupMemberType_Owner) {
+                    return ErrorCode.ERROR_CODE_GROUP_MUTED;
+                }
+
+                if (member.getMemberId().equals(memberId) && member.getType() == GroupMemberType_Removed) {
+                    return ErrorCode.ERROR_CODE_NOT_IN_GROUP;
+                }
+                isInGroup = true;
+                break;
+            }
+
+        }
+
+        if (!isInGroup) {
+            return ErrorCode.ERROR_CODE_NOT_IN_GROUP;
+        }
+
+        return ErrorCode.ERROR_CODE_SUCCESS;
     }
 
     @Override
-    public ErrorCode recallMessage(long messageUid, String operatorId) {
+    public ErrorCode recallMessage(long messageUid, String operatorId, boolean isAdmin) {
         HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
         IMap<Long, MessageBundle> mIMap = hzInstance.getMap(MESSAGES_MAP);
 
@@ -979,7 +1330,10 @@ public class MemoryMessagesStore implements IMessagesStore {
         if (messageBundle != null) {
             WFCMessage.Message message = messageBundle.getMessage();
             boolean canRecall = false;
-            if (message.getFromUser().equals(operatorId)) {
+            if (isAdmin) {
+                canRecall = true;
+            }
+            if (!isAdmin && message.getFromUser().equals(operatorId)) {
                 canRecall = true;
             }
 
@@ -996,9 +1350,12 @@ public class MemoryMessagesStore implements IMessagesStore {
 
                 MultiMap<String, WFCMessage.GroupMember> groupMembers = hzInstance.getMultiMap(GROUP_MEMBERS);
                 Collection<WFCMessage.GroupMember> members = groupMembers.get(message.getConversation().getTarget());
+                if (members == null || members.size() == 0) {
+                    members = loadGroupMemberFromDB(hzInstance, message.getConversation().getTarget());
+                }
                 for (WFCMessage.GroupMember member : members) {
                     if (member.getMemberId().equals(operatorId)) {
-                        if (member.getType() == ProtoConstants.GroupMemberType.GroupMemberType_Manager || member.getType() == ProtoConstants.GroupMemberType.GroupMemberType_Owner) {
+                        if (member.getType() == GroupMemberType_Manager || member.getType() == ProtoConstants.GroupMemberType.GroupMemberType_Owner) {
                             canRecall = true;
                         }
                         break;
@@ -1019,11 +1376,25 @@ public class MemoryMessagesStore implements IMessagesStore {
             message = message.toBuilder().setContent(message.getContent().toBuilder().setContent(operatorId).setType(80).clearSearchableContent().setData(ByteString.copyFrom(new StringBuffer().append(messageUid).toString().getBytes())).build()).build();
             messageBundle.setMessage(message);
 
+            databaseStore.deleteMessage(messageUid);
+
             mIMap.put(messageUid, messageBundle, 7, TimeUnit.DAYS);
             return ErrorCode.ERROR_CODE_SUCCESS;
         } else {
             return ErrorCode.ERROR_CODE_NOT_EXIST;
         }
+    }
+
+    @Override
+    public void clearUserMessages(String userId) {
+        mWriteLock.lock();
+        try {
+            userMessages.remove(userId);
+        } finally {
+            mWriteLock.unlock();
+        }
+
+        databaseStore.clearUserMessage(userId);
     }
 
     @Override
@@ -1080,7 +1451,7 @@ public class MemoryMessagesStore implements IMessagesStore {
     }
 
     @Override
-    public ErrorCode modifyUserInfo(String userId, WFCMessage.ModifyMyInfoRequest request) {
+    public ErrorCode modifyUserInfo(String userId, WFCMessage.ModifyMyInfoRequest request) throws Exception {
         HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
         IMap<String, WFCMessage.User> mUserMap = hzInstance.getMap(USERS);
 
@@ -1129,7 +1500,8 @@ public class MemoryMessagesStore implements IMessagesStore {
                     modified = true;
                     break;
                 case Modify_Social:
-
+                    builder.setSocial(entry.getValue());
+                    modified = true;
                     break;
                 case Modify_Extra:
                     builder.setExtra(entry.getValue());
@@ -1143,8 +1515,8 @@ public class MemoryMessagesStore implements IMessagesStore {
         if (modified) {
             builder.setUpdateDt(System.currentTimeMillis());
             user = builder.build();
+            databaseStore.updateUser(user);
             mUserMap.set(userId, user);
-//            databaseStore.updateUser(user);
             return ErrorCode.ERROR_CODE_SUCCESS;
         } else {
             return ErrorCode.ERROR_CODE_NOT_MODIFIED;
@@ -1161,7 +1533,6 @@ public class MemoryMessagesStore implements IMessagesStore {
         } else {
             mUserMap.put(userId, status);
         }
-        databaseStore.updateUserStatus(userId, status);
         return ErrorCode.ERROR_CODE_SUCCESS;
     }
 
@@ -1190,11 +1561,30 @@ public class MemoryMessagesStore implements IMessagesStore {
     }
 
     @Override
-    public void addUserInfo(WFCMessage.User user, String password) {
+    public void addUserInfo(WFCMessage.User user, String password) throws Exception {
         HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
         IMap<String, WFCMessage.User> mUserMap = hzInstance.getMap(USERS);
+        databaseStore.updateUser(user);
         mUserMap.put(user.getUid(), user);
         databaseStore.updateUserPassword(user.getUid(), password);
+    }
+
+    @Override
+    public void destoryUser(String userId) {
+        HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
+        IMap<String, WFCMessage.User> mUserMap = hzInstance.getMap(USERS);
+        WFCMessage.User us = mUserMap.get(userId);
+        if (us != null) {
+            us = WFCMessage.User.newBuilder().setUid(userId).setUpdateDt(System.currentTimeMillis()).setDisplayName("").setName(userId).setDeleted(1).build();
+            try {
+                databaseStore.updateUser(us);
+            } catch (Exception e) {
+                e.printStackTrace();
+                Utility.printExecption(LOG, e);
+            }
+            mUserMap.put(userId, us);
+        }
+
     }
 
     @Override
@@ -1221,8 +1611,18 @@ public class MemoryMessagesStore implements IMessagesStore {
         return getUserInfo(userId);
     }
     @Override
-    public List<WFCMessage.User> searchUser(String keyword, boolean buzzy, int page) {
-        return databaseStore.searchUserFromDB(keyword, buzzy, page);
+    public List<WFCMessage.User> searchUser(String keyword, int searchType, int page) {
+        return databaseStore.searchUserFromDB(keyword, searchType, page);
+    }
+
+    @Override
+    public boolean updateSystemSetting(int id, String value, String desc) {
+        return databaseStore.updateSystemSetting(id, value, desc);
+    }
+
+    @Override
+    public SystemSettingPojo getSystemSetting(int id) {
+        return databaseStore.getSystemSetting(id);
     }
 
     @Override
@@ -1337,27 +1737,49 @@ public class MemoryMessagesStore implements IMessagesStore {
     }
 
     @Override
-    public boolean isBlacked(String fromUser, String userId) {
+    public ErrorCode isAllowUserMessage(String targetUser, String fromUser) {
         HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
         MultiMap<String, FriendData> friendsMap = hzInstance.getMultiMap(USER_FRIENDS);
 
-        Collection<FriendData> friendDatas = friendsMap.get(fromUser);
+        Collection<FriendData> friendDatas = friendsMap.get(targetUser);
 
-        if (friendDatas == null) {
-            return false;
+        if (friendDatas == null || friendDatas.size() == 0) {
+            friendDatas = loadFriend(friendsMap, targetUser);
         }
 
         for (FriendData friendData : friendDatas) {
-            if (friendData.getFriendUid().equals(userId)) {
-                if (friendData.getState() == 2) {
-                    return true;
+            if (friendData.getFriendUid().equals(fromUser)) {
+                if (friendData.getBlacked() == 1) {
+                    return ErrorCode.ERROR_CODE_IN_BLACK_LIST;
                 } else {
-                    return false;
+                    if (friendData.getState() == 0) {
+                        return ErrorCode.ERROR_CODE_SUCCESS;
+                    } else {
+                        break;
+                    }
                 }
             }
         }
 
-        return false;
+        if (mDisableStrangerChat) {
+            //在禁止私聊时，允许机器人，物联网设备及管理员进行私聊。
+            IMap<String, WFCMessage.User> mUserMap = hzInstance.getMap(USERS);
+            WFCMessage.User target = mUserMap.get(targetUser);
+            if (target != null && target.getType() != ProtoConstants.UserType.UserType_Normal) {
+                return ErrorCode.ERROR_CODE_SUCCESS;
+            }
+            target = mUserMap.get(fromUser);
+            if (target != null && target.getType() != ProtoConstants.UserType.UserType_Normal) {
+                return ErrorCode.ERROR_CODE_SUCCESS;
+            }
+            //admin的usertype为3，所以不需要hardcode为admin添加例外
+//            if (targetUser.equals("admin") || fromUser.equals("admin")) {
+//                return ErrorCode.ERROR_CODE_SUCCESS;
+//            }
+            return ErrorCode.ERROR_CODE_NOT_RIGHT;
+        }
+
+        return ErrorCode.ERROR_CODE_SUCCESS;
     }
 
     @Override
@@ -1385,8 +1807,7 @@ public class MemoryMessagesStore implements IMessagesStore {
                 String pwd_md5 = rs.getString(2);
                 try {
                     MessageDigest md5 = MessageDigest.getInstance("MD5");
-                    BASE64Encoder base64en = new BASE64Encoder();
-                    String passwdMd5 = base64en.encode(md5.digest(password.getBytes("utf-8")));
+                    String passwdMd5 = Base64.getEncoder().encodeToString(md5.digest(password.getBytes("utf-8")));
                     if (passwdMd5.equals(pwd_md5)) {
                         LOG.info("login success userName={}, userId={}", name, uid);
                         userIdRet.add(uid);
@@ -1415,31 +1836,91 @@ public class MemoryMessagesStore implements IMessagesStore {
         }
     }
 
+    synchronized Collection<FriendData> loadFriend(MultiMap<String, FriendData> friendsMap, String userId) {
+        Collection<FriendData> friends = databaseStore.getPersistFriends(userId);
+        if (friends != null) {
+            for (FriendData friend : friends) {
+                friendsMap.put(userId, friend);
+            }
+        } else {
+            friends = new ArrayList<>();
+        }
+        return friends;
+    }
+
+    synchronized Collection<WFCMessage.FriendRequest> loadFriendRequest(MultiMap<String, WFCMessage.FriendRequest> requestMap, String userId) {
+        Collection<WFCMessage.FriendRequest> requests = databaseStore.getPersistFriendRequests(userId);
+        if (requests != null) {
+            for (WFCMessage.FriendRequest r : requests
+                ) {
+                requestMap.put(userId, r);
+            }
+        } else {
+            requests = new ArrayList<>();
+        }
+        return requests;
+    }
+
     @Override
-    public List<FriendData> getFriendList(String userId, long version) {
+    public List<FriendData> getFriendList(String userId, String clientId, long version) {
         List<FriendData> out = new ArrayList<FriendData>();
 
         HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
         MultiMap<String, FriendData> friendsMap = hzInstance.getMultiMap(USER_FRIENDS);
         Collection<FriendData> friends = friendsMap.get(userId);
         if (friends == null || friends.size() == 0) {
-            friends = databaseStore.getPersistFriends(userId);
-            if (friends != null) {
-                for (FriendData friend : friends) {
-                    friendsMap.put(userId, friend);
-                }
-            } else {
-                friends = new ArrayList<>();
+            friends = loadFriend(friendsMap, userId);
+        }
+
+        boolean needFriendMigrate = false;
+
+        if (!StringUtil.isNullOrEmpty(clientId)) {
+            MemorySessionStore.Session session = m_Server.getStore().sessionsStore().getSession(clientId);
+            if(session != null && session.getMqttVersion() != null && session.getMqttVersion().protocolLevel() < MqttVersion.Wildfire_2.protocolLevel()) {
+                needFriendMigrate = true;
             }
         }
 
         for (FriendData friend : friends) {
             if (friend.getTimestamp() > version) {
-                out.add(friend);
+                if (needFriendMigrate) {
+                    if (friend.getBlacked() > 0) {
+                        friend.setState(2);
+                    }
+                    out.add(friend);
+                } else {
+                    out.add(friend);
+                }
+
             }
         }
 
         return out;
+    }
+
+    @Override
+    public void clearUserFriend(String userId) {
+        HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
+        MultiMap<String, FriendData> friendsMap = hzInstance.getMultiMap(USER_FRIENDS);
+
+        Collection<FriendData> friendDatas = friendsMap.get(userId);
+        if (friendDatas == null || friendDatas.size() == 0) {
+            friendDatas = loadFriend(friendsMap, userId);
+        }
+
+        databaseStore.removeUserFriend(userId);
+        databaseStore.removeUserFriendRequest(userId);
+
+        MultiMap<String, WFCMessage.FriendRequest> requestMap = hzInstance.getMultiMap(USER_FRIENDS_REQUEST);
+        requestMap.remove(userId);
+
+
+        if (friendDatas != null) {
+            for (FriendData fd : friendDatas) {
+                friendsMap.remove(fd.getFriendUid());
+            }
+            friendsMap.remove(userId);
+        }
     }
 
     @Override
@@ -1450,15 +1931,7 @@ public class MemoryMessagesStore implements IMessagesStore {
         MultiMap<String, WFCMessage.FriendRequest> requestMap = hzInstance.getMultiMap(USER_FRIENDS_REQUEST);
         Collection<WFCMessage.FriendRequest> requests = requestMap.get(userId);
         if (requests == null || requests.size() == 0) {
-            requests = databaseStore.getPersistFriendRequests(userId);
-            if (requests != null) {
-                for (WFCMessage.FriendRequest request : requests) {
-                    if (request.getUpdateDt() > version)
-                        requestMap.put(userId, request);
-                }
-            } else {
-                requests = new ArrayList<>();
-            }
+            requests = loadFriendRequest(requestMap, userId);
         }
 
         for (WFCMessage.FriendRequest request : requests) {
@@ -1476,15 +1949,7 @@ public class MemoryMessagesStore implements IMessagesStore {
         MultiMap<String, WFCMessage.FriendRequest> requestMap = hzInstance.getMultiMap(USER_FRIENDS_REQUEST);
         Collection<WFCMessage.FriendRequest> requests = requestMap.get(userId);
         if (requests == null || requests.size() == 0) {
-            requests = databaseStore.getPersistFriendRequests(userId);
-            if (requests != null) {
-                for (WFCMessage.FriendRequest r : requests
-                    ) {
-                    requestMap.put(userId, r);
-                }
-            } else {
-                requests = new ArrayList<>();
-            }
+            requests = loadFriendRequest(requestMap, userId);
         }
 
         WFCMessage.FriendRequest existRequest = null;
@@ -1497,16 +1962,33 @@ public class MemoryMessagesStore implements IMessagesStore {
         }
 
         if (existRequest != null && existRequest.getStatus() != ProtoConstants.FriendRequestStatus.RequestStatus_Accepted) {
-            if (System.currentTimeMillis() - existRequest.getUpdateDt() > 7 * 24 * 60 * 60 * 1000) {
+            if (mFriendRequestDuration > 0 && System.currentTimeMillis() - existRequest.getUpdateDt() > mFriendRequestDuration) {
                 if (existRequest.getStatus() == ProtoConstants.FriendRequestStatus.RequestStatus_Rejected
-                    && System.currentTimeMillis() - existRequest.getUpdateDt() < 30 * 24 * 60 * 60 * 1000) {
+                    && System.currentTimeMillis() - existRequest.getUpdateDt() < mFriendRejectDuration) {
                     return ErrorCode.ERROR_CODE_FRIEND_REQUEST_BLOCKED;
                 }
-                requestMap.remove(userId, existRequest);
             } else {
                 return ErrorCode.ERROR_CODE_FRIEND_ALREADY_REQUEST;
             }
         }
+
+        MultiMap<String, FriendData> friendsMap = hzInstance.getMultiMap(USER_FRIENDS);
+
+        FriendData friendData1 = null;
+        Collection<FriendData> friendDatas = friendsMap.get(userId);
+        if (friendDatas == null || friendDatas.size() == 0) {
+            friendDatas = loadFriend(friendsMap, userId);
+        }
+        for (FriendData fd : friendDatas) {
+            if (fd.getFriendUid().equals(request.getTargetUid())) {
+                friendData1 = fd;
+                break;
+            }
+        }
+        if (friendData1 != null && friendData1.getBlacked() > 0) {
+            return ErrorCode.ERROR_CODE_IN_BLACK_LIST;
+        }
+
         WFCMessage.FriendRequest newRequest = WFCMessage.FriendRequest
             .newBuilder()
             .setFromUid(userId)
@@ -1517,9 +1999,10 @@ public class MemoryMessagesStore implements IMessagesStore {
             .setUpdateDt(System.currentTimeMillis())
             .build();
 
-        requestMap.put(userId, newRequest);
-        requestMap.put(request.getTargetUid(), newRequest);
         databaseStore.persistOrUpdateFriendRequest(newRequest);
+        requestMap.remove(userId);
+        requestMap.remove(request.getTargetUid());
+
         head[0] = newRequest.getUpdateDt();
         return ErrorCode.ERROR_CODE_SUCCESS;
     }
@@ -1547,6 +2030,9 @@ public class MemoryMessagesStore implements IMessagesStore {
 
             FriendData friendData1 = null;
             Collection<FriendData> friendDatas = friendsMap.get(userId);
+            if (friendDatas == null || friendDatas.size() == 0) {
+                friendDatas = loadFriend(friendsMap, userId);
+            }
             for (FriendData fd : friendDatas) {
                 if (fd.getFriendUid().equals(request.getTargetUid())) {
                     friendData1 = fd;
@@ -1554,20 +2040,22 @@ public class MemoryMessagesStore implements IMessagesStore {
                 }
             }
             if (friendData1 == null) {
-                friendData1 = new FriendData(userId, request.getTargetUid(), "", request.getStatus(), System.currentTimeMillis());
+                friendData1 = new FriendData(userId, request.getTargetUid(), "", request.getExtra(), request.getStatus(), 0, System.currentTimeMillis());
             } else {
-                friendsMap.remove(userId, friendData1);
                 friendData1.setState(request.getStatus());
+                friendData1.setExtra(request.getExtra());
                 friendData1.setTimestamp(System.currentTimeMillis());
             }
 
-            friendsMap.put(userId, friendData1);
             databaseStore.persistOrUpdateFriendData(friendData1);
 
             if (request.getStatus() != 2) {
                 FriendData friendData2 = null;
 
                 friendDatas = friendsMap.get(request.getTargetUid());
+                if (friendDatas == null || friendDatas.size() == 0) {
+                    friendDatas = loadFriend(friendsMap, request.getTargetUid());
+                }
                 for (FriendData fd : friendDatas) {
                     if (fd.getFriendUid().equals(userId)) {
                         friendData2 = fd;
@@ -1575,15 +2063,13 @@ public class MemoryMessagesStore implements IMessagesStore {
                     }
                 }
                 if (friendData2 == null) {
-                    friendData2 = new FriendData(request.getTargetUid(), userId, "", request.getStatus(), friendData1.getTimestamp());
+                    friendData2 = new FriendData(request.getTargetUid(), userId, "", request.getExtra(), request.getStatus(), 0, friendData1.getTimestamp());
                 } else {
                     friendsMap.remove(request.getTargetUid(), friendData2);
                     friendData2.setState(request.getStatus());
                     friendData2.setTimestamp(System.currentTimeMillis());
                 }
 
-
-                friendsMap.put(request.getTargetUid(), friendData2);
                 databaseStore.persistOrUpdateFriendData(friendData2);
 
                 heads[0] = friendData2.getTimestamp();
@@ -1591,19 +2077,15 @@ public class MemoryMessagesStore implements IMessagesStore {
                 heads[0] = 0;
             }
             heads[1] = friendData1.getTimestamp();
+            friendsMap.remove(userId);
+            friendsMap.remove(request.getTargetUid());
             return ErrorCode.ERROR_CODE_SUCCESS;
         }
 
         MultiMap<String, WFCMessage.FriendRequest> requestMap = hzInstance.getMultiMap(USER_FRIENDS_REQUEST);
         Collection<WFCMessage.FriendRequest> requests = requestMap.get(userId);
         if (requests == null || requests.size() == 0) {
-            requests = databaseStore.getPersistFriendRequests(userId);
-            if (requests != null) {
-                for (WFCMessage.FriendRequest r : requests
-                    ) {
-                    requestMap.put(userId, r);
-                }
-            }
+            requests = loadFriendRequest(requestMap, userId);
         }
 
         WFCMessage.FriendRequest existRequest = null;
@@ -1615,30 +2097,30 @@ public class MemoryMessagesStore implements IMessagesStore {
         }
 
         if (existRequest != null) {
-            if (System.currentTimeMillis() - existRequest.getUpdateDt() > 7 * 24 * 60 * 60 * 1000) {
-                return ErrorCode.ERROR_CODE_FRIEND_REQUEST_OVERTIME;
+            if (mFriendRequestExpiration > 0 && System.currentTimeMillis() - existRequest.getUpdateDt() > mFriendRequestExpiration) {
+                return ErrorCode.ERROR_CODE_FRIEND_REQUEST_EXPIRED;
             } else {
-                requestMap.remove(userId, existRequest);
-                existRequest = existRequest.toBuilder().setStatus(ProtoConstants.FriendRequestStatus.RequestStatus_Accepted).setUpdateDt(System.currentTimeMillis()).build();
+                existRequest = existRequest.toBuilder().setStatus(request.getStatus()).setUpdateDt(System.currentTimeMillis()).build();
                 databaseStore.persistOrUpdateFriendRequest(existRequest);
-                requestMap.put(userId, existRequest);
+                if(request.getStatus() == ProtoConstants.FriendRequestStatus.RequestStatus_Accepted){
+                    MultiMap<String, FriendData> friendsMap = hzInstance.getMultiMap(USER_FRIENDS);
+                    FriendData friendData1 = new FriendData(userId, request.getTargetUid(), "", request.getExtra(), 0, 0, System.currentTimeMillis());
+                    databaseStore.persistOrUpdateFriendData(friendData1);
 
+                    FriendData friendData2 = new FriendData(request.getTargetUid(), userId, "", request.getExtra(), 0, 0, friendData1.getTimestamp());
+                    databaseStore.persistOrUpdateFriendData(friendData2);
 
-                MultiMap<String, FriendData> friendsMap = hzInstance.getMultiMap(USER_FRIENDS);
+                    requestMap.remove(userId);
+                    requestMap.remove(request.getTargetUid());
+                    friendsMap.remove(userId);
+                    friendsMap.remove(request.getTargetUid());
 
-                FriendData friendData1 = new FriendData(userId, request.getTargetUid(), "", 0, System.currentTimeMillis());
-                friendsMap.put(userId, friendData1);
-                databaseStore.persistOrUpdateFriendData(friendData1);
+                    heads[0] = friendData2.getTimestamp();
+                    heads[1] = friendData1.getTimestamp();
 
-                FriendData friendData2 = new FriendData(request.getTargetUid(), userId, "", 0, friendData1.getTimestamp());
-                friendsMap.put(request.getTargetUid(), friendData2);
-                databaseStore.persistOrUpdateFriendData(friendData2);
-
-                heads[0] = friendData2.getTimestamp();
-                heads[1] = friendData1.getTimestamp();
-
-                msgBuilder.setConversation(WFCMessage.Conversation.newBuilder().setTarget(userId).setLine(0).setType(ProtoConstants.ConversationType.ConversationType_Private).build());
-                msgBuilder.setContent(WFCMessage.MessageContent.newBuilder().setType(1).setSearchableContent(existRequest.getReason()).build());
+                    msgBuilder.setConversation(WFCMessage.Conversation.newBuilder().setTarget(userId).setLine(0).setType(ProtoConstants.ConversationType.ConversationType_Private).build());
+                    msgBuilder.setContent(WFCMessage.MessageContent.newBuilder().setType(1).setSearchableContent(existRequest.getReason()).build());
+                }
                 return ErrorCode.ERROR_CODE_SUCCESS;
             }
         } else {
@@ -1648,11 +2130,21 @@ public class MemoryMessagesStore implements IMessagesStore {
 
     @Override
     public ErrorCode blackUserRequest(String fromUser, String targetUserId, int state, long[] heads) {
+        if (state == 2) {
+            state = 1;
+        } else {
+            state = 0;
+        }
+
         HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
         MultiMap<String, FriendData> friendsMap = hzInstance.getMultiMap(USER_FRIENDS);
 
         FriendData friendData = null;
         Collection<FriendData> friends = friendsMap.get(fromUser);
+        if (friends == null || friends.size() == 0) {
+            friends = loadFriend(friendsMap, fromUser);
+        }
+
         for (FriendData fd:friends) {
             if (fd.getFriendUid().equals(targetUserId)) {
                 friendData = fd;
@@ -1661,17 +2153,37 @@ public class MemoryMessagesStore implements IMessagesStore {
         }
 
         if (friendData == null) {
-            friendData = new FriendData(fromUser, targetUserId, "", state, System.currentTimeMillis());
+            friendData = new FriendData(fromUser, targetUserId, "", "", 1, state, System.currentTimeMillis());
         }
-        friendData.setState(state);
+        friendData.setBlacked(state);
         friendData.setTimestamp(System.currentTimeMillis());
 
-        friendsMap.put(fromUser, friendData);
+
         databaseStore.persistOrUpdateFriendData(friendData);
+        friendsMap.remove(fromUser);
 
         heads[0] = friendData.getTimestamp();
 
         return ErrorCode.ERROR_CODE_SUCCESS;
+    }
+
+    @Override
+    public FriendData getFriendData(String fromUser, String targetUserId) {
+        HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
+        MultiMap<String, FriendData> friendsMap = hzInstance.getMultiMap(USER_FRIENDS);
+
+        Collection<FriendData> friends = friendsMap.get(fromUser);
+        if (friends == null || friends.size() == 0) {
+            friends = loadFriend(friendsMap, fromUser);
+        }
+
+        for (FriendData fd:friends) {
+            if (fd.getFriendUid().equals(targetUserId)) {
+                return fd;
+            }
+        }
+
+        return null;
     }
 
     @Override
@@ -1681,6 +2193,10 @@ public class MemoryMessagesStore implements IMessagesStore {
 
         FriendData friendData = null;
         Collection<FriendData> friends = friendsMap.get(fromUser);
+        if (friends == null || friends.size() == 0) {
+            friends = loadFriend(friendsMap, fromUser);
+        }
+
         for (FriendData fd:friends) {
             if (fd.getFriendUid().equals(targetUserId)) {
                 friendData = fd;
@@ -1695,10 +2211,11 @@ public class MemoryMessagesStore implements IMessagesStore {
         friendData.setAlias(alias);
         friendData.setTimestamp(System.currentTimeMillis());
 
-        friendsMap.put(fromUser, friendData);
         databaseStore.persistOrUpdateFriendData(friendData);
 
         heads[0] = friendData.getTimestamp();
+
+        friendsMap.remove(fromUser);
 
         return ErrorCode.ERROR_CODE_SUCCESS;
     }
@@ -1734,35 +2251,55 @@ public class MemoryMessagesStore implements IMessagesStore {
     }
 
     @Override
-    public ErrorCode deleteFriend(String userId, String friendUid) {
+    public boolean checkChatroomParticipantIdelTime(MemorySessionStore.Session session) {
+        if (session == null) {
+            return false;
+        }
+
+        if(mChatroomParticipantIdleTime > 0 && System.currentTimeMillis() - session.getLastChatroomActiveTime() > mChatroomParticipantIdleTime) {
+            return false;
+        }
+        return true;
+    }
+
+    @Override
+    public ErrorCode deleteFriend(String userId, String friendUid, long[] head) {
         HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
         MultiMap<String, FriendData> friendsMap = hzInstance.getMultiMap(USER_FRIENDS);
         Collection<FriendData> user1Friends = friendsMap.get(userId);
+        if (user1Friends == null || user1Friends.size() == 0) {
+            user1Friends = loadFriend(friendsMap, userId);
+        }
         for (FriendData data :
             user1Friends) {
             if (data.getFriendUid().equals(friendUid)) {
-                friendsMap.remove(userId, data);
+                long ts = System.currentTimeMillis();
+                head[0] = ts;
                 data.setState(1);
-                data.setTimestamp(System.currentTimeMillis());
-                friendsMap.put(userId, data);
+                data.setTimestamp(ts);
                 databaseStore.persistOrUpdateFriendData(data);
                 break;
             }
         }
 
         Collection<FriendData> user2Friends = friendsMap.get(friendUid);
+        if (user2Friends == null || user2Friends.size() == 0) {
+            user2Friends = loadFriend(friendsMap, friendUid);
+        }
         for (FriendData data :
             user2Friends) {
             if (data.getFriendUid().equals(userId)) {
-                friendsMap.remove(friendUid, data);
                 data.setState(1);
-                data.setTimestamp(System.currentTimeMillis());
-                friendsMap.put(friendUid, data);
+                long ts = System.currentTimeMillis();
+                head[1] = ts;
+                data.setTimestamp(ts);
                 databaseStore.persistOrUpdateFriendData(data);
                 break;
             }
         }
 
+        friendsMap.remove(userId);
+        friendsMap.remove(friendUid);
         return ErrorCode.ERROR_CODE_SUCCESS;
     }
 
@@ -1770,6 +2307,8 @@ public class MemoryMessagesStore implements IMessagesStore {
     public ErrorCode getUserSettings(String userId, long version, WFCMessage.GetUserSettingResult.Builder builder) {
         HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
         MultiMap<String, WFCMessage.UserSettingEntry> userSettingMap = hzInstance.getMultiMap(USER_SETTING);
+        IMap<String, WFCMessage.GroupInfo> mGroups = hzInstance.getMap(GROUPS_MAP);
+        IMap<String, WFCMessage.ChannelInfo> mChannels = hzInstance.getMap(CHANNELS);
 
         Collection<WFCMessage.UserSettingEntry> entries = userSettingMap.get(userId);
         if (entries == null || entries.size() == 0) {
@@ -1777,12 +2316,52 @@ public class MemoryMessagesStore implements IMessagesStore {
         }
 
         ErrorCode ec = ErrorCode.ERROR_CODE_NOT_MODIFIED;
+        Calendar c = Calendar.getInstance();
+        c.setTime(new Date());
+        c.add(Calendar.MONTH, -1);
+        long monthAgo = c.getTimeInMillis();
+
         if (entries != null) {
             for (WFCMessage.UserSettingEntry entry : entries
             ) {
                 if (entry.getUpdateDt() > version) {
                     ec = ErrorCode.ERROR_CODE_SUCCESS;
-                    builder.addEntry(entry);
+                    boolean skip = false;
+                    if (version == 0 && entry.getUpdateDt() > monthAgo) {
+                        if (entry.getScope() == UserSettingScope.kUserSettingConversationSync) {
+                            try {
+                                String key = entry.getKey();
+                                int pos1 = key.indexOf('-');
+                                String typeStr = key.substring(0, pos1);
+                                int type = Integer.parseInt(typeStr);
+                                if (type == ProtoConstants.ConversationType.ConversationType_Group
+                                    || type == ProtoConstants.ConversationType.ConversationType_Channel) {
+                                    int pos2 = key.indexOf('-', pos1 + 1);
+                                    String target = key.substring(pos2 + 1);
+
+                                    if (type == ProtoConstants.ConversationType.ConversationType_Group) {
+                                        WFCMessage.GroupInfo groupInfo = mGroups.get(target);
+                                        if (groupInfo == null) {
+                                            skip = true;
+                                        }
+                                    } else {
+                                        WFCMessage.ChannelInfo channelInfo = mChannels.get(target);
+                                        if (channelInfo == null) {
+                                            skip = true;
+                                        }
+                                    }
+                                }
+                            } catch (Exception e) {
+                                e.printStackTrace();
+                                Utility.printExecption(LOG, e);
+                            }
+
+                        }
+                    }
+
+                    if (!skip) {
+                        builder.addEntry(entry);
+                    }
                 }
             }
         }
@@ -1867,7 +2446,7 @@ public class MemoryMessagesStore implements IMessagesStore {
             if (entry.getScope() == request.getScope() && entry.getKey().equals(request.getKey())) {
                 userSettingMap.remove(userId, entry);
                 userSettingMap.put(userId, settingEntry);
-                return updateDt;
+                break;
             }
         }
 
@@ -1876,6 +2455,14 @@ public class MemoryMessagesStore implements IMessagesStore {
         userConvSlientMap.remove(userId);
         userPushHiddenDetail.remove(userId);
         return updateDt;
+    }
+
+    @Override
+    public void clearUserSettings(String userId) {
+        databaseStore.clearUserSetting(userId);
+        HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
+        MultiMap<String, WFCMessage.UserSettingEntry> userSettingMap = hzInstance.getMultiMap(USER_SETTING);
+        userSettingMap.remove(userId);
     }
 
     @Override
@@ -1897,7 +2484,7 @@ public class MemoryMessagesStore implements IMessagesStore {
     public boolean getUserPushHiddenDetail(String userId) {
         Boolean hidden = userPushHiddenDetail.get(userId);
         if (hidden == null) {
-            WFCMessage.UserSettingEntry entry = getUserSetting(userId, UserSettingScope.kUserSettingGlobalSilent, null);
+            WFCMessage.UserSettingEntry entry = getUserSetting(userId, UserSettingScope.kUserSettingHiddenNotificationDetail, null);
             if (entry == null || !entry.getValue().equals("1")) {
                 hidden = false;
             } else {
@@ -1936,6 +2523,12 @@ public class MemoryMessagesStore implements IMessagesStore {
     }
 
     @Override
+    public void clearUserChannels(String userId) {
+
+    }
+
+
+    @Override
     public ErrorCode modifyChannelInfo(String operator, String channelId, int modifyType, String value) {
         HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
         IMap<String, WFCMessage.ChannelInfo> mIMap = hzInstance.getMap(CHANNELS);
@@ -1969,8 +2562,9 @@ public class MemoryMessagesStore implements IMessagesStore {
         else if(modifyType == Modify_Channel_OnlyCallback) {
             try {
                 newInfoBuilder.setAutomatic(Integer.parseInt(value));
-            } catch (NumberFormatException e) {
+            } catch (Exception e) {
                 e.printStackTrace();
+                Utility.printExecption(LOG, e);
             }
         }
 
@@ -2024,7 +2618,7 @@ public class MemoryMessagesStore implements IMessagesStore {
 
         WFCMessage.ChannelInfo.Builder newInfoBuilder = oldInfo.toBuilder();
 
-        newInfoBuilder.setStatus(Channel_Status_Destoryed);
+        newInfoBuilder.setStatus(oldInfo.getStatus() | Channel_State_Mask_Deleted);
         newInfoBuilder.setUpdateDt(System.currentTimeMillis());
         mIMap.put(channelId, newInfoBuilder.build());
         return ErrorCode.ERROR_CODE_SUCCESS;
@@ -2040,6 +2634,8 @@ public class MemoryMessagesStore implements IMessagesStore {
         HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
         MultiMap<String, String> listeners = hzInstance.getMultiMap(CHANNEL_LISTENERS);
 
+        getChannelListener(channelId);
+
         if (listen) {
             listeners.put(channelId, operator);
         } else {
@@ -2048,6 +2644,19 @@ public class MemoryMessagesStore implements IMessagesStore {
         databaseStore.updateChannelListener(channelId, operator, listen);
 
         return ErrorCode.ERROR_CODE_SUCCESS;
+    }
+
+    private Collection<String> getChannelListener(String channelId) {
+        HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
+        MultiMap<String, String> listeners = hzInstance.getMultiMap(CHANNEL_LISTENERS);
+        Collection<String> result = listeners.get(channelId);
+        if (result.isEmpty()) {
+            result = databaseStore.getChannelListener(channelId);
+            for (String userId : result) {
+                listeners.put(channelId, userId);
+            }
+        }
+        return result;
     }
 
     @Override
@@ -2059,12 +2668,12 @@ public class MemoryMessagesStore implements IMessagesStore {
 
     @Override
     public boolean checkUserInChannel(String user, String channelId) {
-        MultiMap<String, String> chatroomMembers = m_Server.getHazelcastInstance().getMultiMap(CHANNEL_LISTENERS);
+        Collection<String> chatroomMembers = getChannelListener(channelId);
         if (chatroomMembers == null) {
             return false;
         }
 
-        if(!chatroomMembers.containsEntry(channelId, user)) {
+        if(!chatroomMembers.contains(user)) {
             IMap<String, WFCMessage.ChannelInfo> mIMap = m_Server.getHazelcastInstance().getMap(CHANNELS);
             WFCMessage.ChannelInfo info = mIMap.get(channelId);
             if (info == null || !info.getOwner().equals(user)) {
@@ -2072,6 +2681,16 @@ public class MemoryMessagesStore implements IMessagesStore {
             }
         }
         return true;
+    }
+
+    @Override
+    public Collection<String> getChannelSubscriber(String channelId) {
+        MultiMap<String, String> channelMembers = m_Server.getHazelcastInstance().getMultiMap(CHANNEL_LISTENERS);
+        if (channelMembers == null) {
+            return new ArrayList<>();
+        }
+
+        return channelMembers.get(channelId);
     }
 
     @Override
@@ -2084,7 +2703,7 @@ public class MemoryMessagesStore implements IMessagesStore {
     public boolean addSensitiveWords(List<String> words) {
         for (String word :
             words) {
-            databaseStore.persistSensitiveWord(word);
+            databaseStore.persistSensitiveWord(word.toLowerCase());
         }
         lastUpdateSensitiveTime = 0;
         return true;
@@ -2096,6 +2715,7 @@ public class MemoryMessagesStore implements IMessagesStore {
             words) {
             databaseStore.deleteSensitiveWord(word);
         }
+        lastUpdateSensitiveTime = 0;
         return true;
     }
 
@@ -2111,10 +2731,6 @@ public class MemoryMessagesStore implements IMessagesStore {
         MessageBundle bundle = mIMap.get(messageId);
         if (bundle != null) {
             return bundle.getMessage();
-        } else {
-            bundle = databaseStore.getMessage(messageId);
-            if (bundle != null)
-                return bundle.getMessage();
         }
         return null;
     }
@@ -2157,15 +2773,10 @@ public class MemoryMessagesStore implements IMessagesStore {
         HazelcastInstance hzInstance = m_Server.getHazelcastInstance();
         MultiMap<String, FriendData> friendsMap = hzInstance.getMultiMap(USER_FRIENDS);
         Collection<FriendData> friends = friendsMap.get(userId);
-        long max = 0;
         if (friends == null || friends.size() == 0) {
-            friends = databaseStore.getPersistFriends(userId);
-            for (FriendData friend :
-                friends) {
-                friendsMap.put(userId, friend);
-            }
+            friends = loadFriend(friendsMap, userId);
         }
-
+        long max = 0;
         if (friends != null && friends.size() > 0) {
             for (FriendData friend :
                 friends) {
@@ -2184,11 +2795,7 @@ public class MemoryMessagesStore implements IMessagesStore {
         Collection<WFCMessage.FriendRequest> friendsReq = friendsReqMap.get(userId);
         long max = 0;
         if (friendsReq == null || friendsReq.size() == 0) {
-            friendsReq = databaseStore.getPersistFriendRequests(userId);
-            for (WFCMessage.FriendRequest req : friendsReq
-                 ) {
-                friendsReqMap.put(userId, req);
-            }
+            friendsReq = loadFriendRequest(friendsReqMap, userId);
         }
 
         if (friendsReq != null && friendsReq.size() > 0) {
@@ -2232,7 +2839,7 @@ public class MemoryMessagesStore implements IMessagesStore {
         }
         return UUIDGenerator.getUUID();
     }
-    
+
     @Override
     public void storeRetained(Topic topic, StoredMessage storedMessage) {
         LOG.debug("Store retained message for topic={}, CId={}", topic, storedMessage.getClientID());
